--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -1,6 +1,10 @@
-资产授权且开启脱敏权限。本页面可进行创建脱敏任务,设置触发方式定时、人工和定时+人工,开启自动运行或手动运行识任务。
+任务管理功能可进行创建脱敏任务，设置触发方式定时、人工和定时+人工,开启自动运行或手动运行识任务。
+
+## 前提条件
+已完成 [资产授权](https://cloud.tencent.com/document/product/882/61177) 且开启脱敏权限。
 
 
+## 操作步骤
 ### 管理 Tencent DB
 1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/auth)，单击脱敏任务菜单下的【任务管理】，进入任务管理页面。
 2. 在任务管理页面，可查看内容包括，同时可以进行相关操作，每个页面默认展示10条数据，可按照不同触发方式、时间及任务名称/创建账号/数据库名称来检索。
