--- a/product/移动与通信/移动解析/开发者手册/获取配置信息.md
+++ b/product/移动与通信/移动解析/开发者手册/获取配置信息.md
@@ -11,7 +11,7 @@
 - **授权 ID**：使⽤移动解析 HTTPDNS 服务中，开发配置的唯⼀标识。调⽤移动解析 HTTPDNS 的 HTTP 解析接口 `http://119.29.29.28` 时中传⼊的授权 ID 参数。
 - **DES 加密密钥**：调⽤移动解析 HTTPDNS 的 HTTP 解析接口 `http://119.29.29.98` 并使用 DES 加密方式时，对 DNS 请求数据进⾏加密时的加密密钥。
 - **AES 加密密钥**：调⽤移动解析 HTTPDNS 的 HTTP 解析接口 `http://119.29.29.98` 并使用 AES 加密方式时，对 DNS 请求数据进⾏加密时的加密密钥。
-- **HTTPS 加密 Token**：调⽤移动解析 HTTPDNS 的 HTTPS 解析接口 `http://119.29.29.99` ，对 DNS 请求数据进⾏鉴权的 Token 信息。
+- **HTTPS 加密 Token**：调⽤移动解析 HTTPDNS 的 HTTPS 解析接口 `https://119.29.29.99` ，对 DNS 请求数据进⾏鉴权的 Token 信息。
 >?若控制台无以下两项信息，请申请应用后再进行查看。具体操作请参见 [SDK 开通流程](https://cloud.tencent.com/document/product/379/12544)。
 >
 -  **IOS APPID**：使用移动解析 HTTPDNS 服务提供的 [IOS 端 SDK](https://cloud.tencent.com/document/product/379/17669) 的 `appId（应用 ID）` 鉴权信息。
