--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/数据源.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/数据源.md
@@ -1,5 +1,8 @@
-数据脱敏帮助用户进行数据脱敏，需要获得资产的账号密码授权。管理及授权页面，为用户提供集中的资产管理和授权管理功能；同时也支持从数据安全中心自动同步资产。
+## 操作场景
+数据源帮助用户进行数据资产获取，需要获得资产的账号密码授权。数据源页面，为用户提供集中的资产管理和授权管理功能。推荐用户开通 [数据安全中心](https://cloud.tencent.com/document/product/1087)，可以自动同步资产，同时也支持自主管理资产。
 
+
+## 操作步骤
 ### 管理 Tencent DB
 1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/auth)， 在左侧导航栏中,单击【数据源】>【Tencent DB】，进入 Tencent DB 页面。
 2. 在 Tencent DB 页面，单击【更新资产列表】，自动拉取您在腾讯云账号内的 Tencent DB，同步成功则会在列表显示。
