--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -1,5 +1,3 @@
-任务管理功能可进行创建脱敏任务，设置触发方式定时、人工和定时+人工,开启自动运行或手动运行识任务。
-
 ## 前提条件
 已完成 [资产授权](https://cloud.tencent.com/document/product/882/61177) 且开启脱敏权限。
 
@@ -12,7 +10,7 @@
 
 ### 新增脱敏任务
 1. 在 [任务管理页面](https://console.cloud.tencent.com/dmask/task)，单击【新建脱敏任务】，弹出新建脱敏任务弹窗。
-2. 在新建脱敏任务弹窗中，依次根据操作步骤提示：填写任务基本信息、脱敏源配置、目标位置配置、脱敏规则配置、处理逻辑确认、完成。即可创建成功
+2. 在新建脱敏任务弹窗中，依次根据操作步骤提示：
  1. 任务基本信息：输入任务名称和备注，单击【下一步】。
  2. 脱敏源配置：选择脱敏源资产来源、数据源和数据抽取方式，单击【下一步】。	
 >?
