--- a/product/存储与CDN/对象存储 4.0/最佳实践/企业云盘解决方案.md
+++ b/product/存储与CDN/对象存储 4.0/最佳实践/企业云盘解决方案.md
@@ -284,7 +284,7 @@
 
 ### 计算方法
 
-- 用户 licence 费用 = 用户数据 x 用户 licence 单价 x 使用时长
+- 用户 licence 费用 = 用户数量 x 用户 licence 单价 x 使用时长
 - 存储容量费用 = 存储容量 x 存储容量单价 x 存储时长
 - 流量费用 =（已用流量 - 免费流量）x 流量单价
 
