--- a/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
@@ -237,8 +237,6 @@ tccc.Call.transfer(options)
       <td>指定会话 Id</td>
    </tr>
 </table>
-Name		Type	Description
-options	sessionId	string	指定会话Id
 给用户放音，坐席会进入静音状态，放音内容需在管理后台配置。
 
 #### 取消呼叫保持
@@ -260,24 +258,24 @@ tccc.Call.unHold(options)
 
 ### Agent
 #### 上线
-tccc.Agent.online()
+`tccc.Agent.online()`
 #### 下线
-tccc.Agent.offline()
+`tccc.Agent.offline()`
 
 ### Admin
 #### 获取技能组列表
-getSkillGroups(): { skillGroupName: string; skillGroupId: string; }[]
+`getSkillGroups(): { skillGroupName: string; skillGroupId: string; }[]`
 
 ### UI
 #### 隐藏SDK UI
-tccc.UI.hide(): void
+`tccc.UI.hide(): void`
 #### 显示SDK UI
-tccc.UI.show(): void
+`tccc.UI.show(): void`
 
 ### Devices
 #### 检测当前浏览器是否支持
 `tccc.Devices.isBrowserSupported(): boolean`
-#### 支持 Chrome 56+，Edge 80+
+支持 Chrome 56+，Edge 80+
 #### 返回麦克风设备列表
 `tccc.Devices.getMicrophones(): Promise<MediaDeviceInfo[]>`
 #### 返回扬声器设备列表
