--- a/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/最佳实践.md
@@ -52,11 +52,11 @@ function injectTCCC({token, sdkAppId, userId, sdkUrl}) {
 | token                     | string | 从云API获得的登录 Token                                       |
 | sdkAppId                  | string | 云呼叫中心实例的 sdkAppId                                      |
 | userid                    | string | 当前坐席在呼叫中心中注册时是用的邮箱地址                                  |
-| showWorkBenchAtFirstLogin | bool   | 是否需要在登录是否马上打开作息工作台。为 true 时，SDK 会在初始化完成后打开坐席工作台。默认为 true。 |
+| showWorkBenchAtFirstLogin | bool   | 是否需要在登录是否马上打开作息工作台。为 true 时，SDK 会在初始化完成后打开坐席工作台。默认为 true |
 
 [](id:sdkAPI)
 ## SDK API
-TCCC SDK 提供 Call、Chat、Agent、Admin、UI 五个 namespace 分别对应电话客服、在线客服、坐席、管理和界面相关 API，使用 API 通过 tccc.namespace.api 的方式调用
+TCCC SDK 提供 Call、Chat、Agent、Admin、UI 五个 namespace 分别对应电话客服、在线客服、坐席、管理和界面相关 API，使用 API 通过 tccc.namespace.api 的方式调用。
 ### Call
 #### 电话呼出
 tccc.Call.startOutboundCall(options)
