--- a/product/域名与网站/域名注册/常见问题/域名续费相关.md
+++ b/product/域名与网站/域名注册/常见问题/域名续费相关.md
@@ -1,3 +1,10 @@
+### 腾讯企业邮箱域名如何续费？
+
+若您的域名在腾讯企业邮箱在线购买，可使用管理员账户登录**邮箱管理后台**->**我的企业**->**域名管理**，单击**续费**即可。
+若您的域名在腾讯企业邮箱在线购买但已转入腾讯云，您可参见[单个域名续费](https://cloud.tencent.com/document/product/242/9644)进行续费。
+
+>?若需将域名转入腾讯云，详情可参见：[腾讯企业邮注册域名转入腾讯云](https://cloud.tencent.com/document/product/242/60831)。
+
 ### 过期域名续费后何时生效？
 由于每个后缀的续费期可能不同，在域名到期后30天左右，您的域名还属于 “续费宽限期”，在此期间您还可以以正常 [续费价格](https://buy.cloud.tencent.com/domain?price=1) 对您的域名进行域名续费操作，具体操作您可参考 [域名续费操作](https://cloud.tencent.com/document/product/242/9644) 文档。如果您的域名过期已超过 “续费宽限期”，您的域名会进入30天左右的 “域名赎回期”，关于 “域名赎回期” 介绍请参阅下文。  
 在域名到期日的第二天，原域名解析即会暂时失效，解析失效后您的网站将无法正常访问，如果您在 “续费宽限期” 内对您的域名进行续费，正在使用腾讯云解析的域名将于续费成功后的72小时内恢复解析，对于使用非腾讯云解析的域名，将于续费成功后的48 - 72小时内恢复解析。
