--- a/product/企业通信/云呼叫中心/SDK 文档/快速集成.md
+++ b/product/企业通信/云呼叫中心/SDK 文档/快速集成.md
@@ -1,4 +1,4 @@
->?本章节中所描述的**获取 SDK 登录 Token** 的方式仅用于调试，正式环境集成 SDK 请参见 [SDK 最佳实践](https://cloud.tencent.com/document/product/679/61238)。
+>?本章节中所描述的**获取 SDK 登录 Token** 的方式仅用于调试，正式环境集成 SDK 请参见 [SDK 使用指南](https://cloud.tencent.com/document/product/679/61268)。
 
 ## 前提条件
 - 已经 [开通腾讯云呼叫中心](https://cloud.tencent.com/document/product/679/48028) 并创建实例，请不要使用体验环境实例。
@@ -17,12 +17,13 @@
 申请过腾讯云呼叫中心实例之后，云呼叫中心实例中至少有一位管理员账号，快速集成时可以使用这一账号，如果需要使用其他账号进行快速集成，请参阅 [客服管理](https://cloud.tencent.com/document/product/679/48056) 的操作步骤进行手动添加。
 [](id:getToken)
 ## 获取 SDK 登录 Token
-获取 Token 接口的相关说明，请查阅 [创建 SDK 登录 Token](https://cloud.tencent.com/document/api/679/49227)。除了文档中使用 SDK 或者接口的方式获取之外，通过 [API Explorer](https://console.cloud.tencent.com/api/explorer?Product=ccc&Version=2020-02-10&Action=CreateSDKLoginToken) 可以更快速获取 Token，并用于调试。
+[](id:step1)
+1. 获取 Token 接口的相关说明，请查阅 [创建 SDK 登录 Token](https://cloud.tencent.com/document/api/679/49227)。除了文档中使用 SDK 或者接口的方式获取之外，通过 [API Explorer](https://console.cloud.tencent.com/api/explorer?Product=ccc&Version=2020-02-10&Action=CreateSDKLoginToken) 可以更快速获取 Token，并用于调试。
 
-进入 API Explorer 界面之后，使用上图步骤获取到的密钥发送请求，SdkAppId 可以通过查看控制台实例列表看到，一般为140开头，请避免使用体验环境实例的 SdkAppId。
+2. 进入 API Explorer 界面之后，使用上面 [步骤1](#step1) 获取到的密钥发送请求，SdkAppId 可以通过查看控制台实例列表看到，通常为140开头，请避免使用体验环境实例的 SdkAppId。
 >?Token 的有效期为10分钟，请在获取到之后立即使用，避免过期。
 
-以下是使用腾讯云 API3.0 SDK(Node 版) 获取 Token 的示例代码。
+以下是使用腾讯云 API3.0 SDK（Node 版） 获取 Token 的示例代码：
 ```
 const tencentcloud = require("tencentcloud-sdk-nodejs"); 
 const CccClient = tencentcloud.ccc.v20200210.Client;
