--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -3,9 +3,10 @@
 
 
 ## 操作步骤
-### 管理 Tencent DB
+### 任务列表管理
 1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/auth)，单击脱敏任务菜单下的【任务管理】，进入任务管理页面。
-2. 在任务管理页面，可查看内容包括，同时可以进行相关操作，每个页面默认展示10条数据，可按照不同触发方式、时间及任务名称/创建账号/数据库名称来检索。
+2. 在任务管理页面，可查看内容包括任务名称、任务创建账号、源资产、目标资产、创建时间、触发方式、执行次数、是否启用、操作等信息。
+3. 在任务管理页面，可以进行相关操作，每个页面默认展示10条数据，可按照不同触发方式、时间及任务名称/创建账号/数据库名称来检索。
 ![](https://main.qcloudimg.com/raw/93d912f3e9c12dd6f832502f5aa19a36.png)
 
 ### 新增脱敏任务
@@ -27,8 +28,8 @@
  6. 完成：确认完相关内容，单击【完成】，即可创建脱敏任务。
 
 ### 手动启动任务
-在 [任务管理页面](https://console.cloud.tencent.com/dmask/task)，选择所需任务名称，单击【启动】，即可在任务运行状况查看详情。
->?需要任务名称为启动状态才能启动该任务，如果未启动，可单击![](https://main.qcloudimg.com/raw/187fff6c819e49de20b80c845b1ee8a2.png)启动该任务。
+在 [任务管理页面](https://console.cloud.tencent.com/dmask/task)，找到需要执行的任务，在操作栏单击【启动】，即可在任务运行状况查看详情。
+>?如果未启动，可单击![](https://main.qcloudimg.com/raw/187fff6c819e49de20b80c845b1ee8a2.png)启动该任务。
 >
 ![](https://main.qcloudimg.com/raw/3ced4f574dead374081b96995d1cd4ca.png)
 
