--- a/product/计算与网络/Serverless Framework/最佳实践/部署全景录制.md
+++ b/product/计算与网络/Serverless Framework/最佳实践/部署全景录制.md
@@ -141,6 +141,7 @@ Content-Type: application/json
 | Height          | number | 否   | 录制画面高度，默认为720，合法取值范围[0, 2560]             |
 | CallbackURL     | string | 否   | 录制结果通知回调地址                                         |
 | MaxDurationLimit | int    | 否   | 录制最大时长限制， 单位s, 合法取值范围[0, 36000]，默认21600s（6小时），超过6小时需要配置永久密钥 |
+| StorageType | string   | 否   | 录制过程中中间态webm文件的存储位置，可选参数为`cos` ，不填写默认为`cfs`。（如果环境变量配置了COS_BUCKET_RAW这个参数，会写在这个桶里面，不配置会写在目标存储桶的raw路径下）|
  | Output         | object | 否   | 请求协议参数          
 | Cos             | object | 否   | 请求协议参数                                                 |
 | Domain          | string | 否   | 录制文件回放域名，不设置为默认源站域名                       |
