--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏规则/脱敏算法.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏规则/脱敏算法.md
@@ -4,10 +4,12 @@
 >?默认有31种内置算法。
 >
 ![](https://main.qcloudimg.com/raw/72c7042ba215dada52c65d02f3f96615.png)
-3. 在脱敏算法页面， 如需对算法进行修改，可在相应数据分类操作列单击【前往配置】，对算法规则进行调正。
+3. 在脱敏算法页面， 如需对算法参数进行调整，可在相应数据分类操作列单击【前往配置】，对算法参数进行调整。
 ![](https://main.qcloudimg.com/raw/397c87a8fab7a29fc996717b63d7a9c3.png)
 4. 在“算法配置”页面，可以修改默认盐值，单击【保存】，即可修改该算法规则。
->?输入原始数据，单击【测试】，可以查看该算法的脱敏结果。
+>?
+>- 此处以 MD5 算法为例。
+>- 输入原始数据，单击【测试】，可以查看该算法的脱敏结果。
 >
 ![](https://main.qcloudimg.com/raw/c5caa1b7b63a871accd487ffbfbd3875.png)
 
