--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -11,7 +11,7 @@
 
 ### 新增脱敏任务
 1. 在 [任务管理页面](https://console.cloud.tencent.com/dmask/task)，单击【新建脱敏任务】，弹出新建脱敏任务弹窗。
-2. 在新建脱敏任务弹窗中，依次根据操作步骤提示：
+2. 在新建脱敏任务弹窗中，依次根据如下的操作步骤进行设置：
  1. 任务基本信息：输入任务名称和备注，单击【下一步】。
  2. 脱敏源配置：选择脱敏源资产来源、数据源和数据抽取方式，单击【下一步】。	
 >?
