--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -22,6 +22,8 @@
 ![](https://main.qcloudimg.com/raw/6d93455750fac374a54a0f1c14716e3d.png)
  3. 目标位置配置：选择目标源资产来源和数据源，单击【下一步】。
  4. 脱敏规则：选择规则模板，或者单击![](https://main.qcloudimg.com/raw/4c4822aee38639f16243efce474ae917.png)启用强制应用模板，单击【下一步】。
+>?可以借助规则模板，进行快速配置。
+>
  ![](https://main.qcloudimg.com/raw/34ad4c09b9ad680a5dc0bae42883b5a4.png)
  5. 处理逻辑确认：根据实际需求，选择触发方式、触发周期和时间设定等信息，单击【下一步】。
  ![](https://main.qcloudimg.com/raw/fbc74fd353a4602299a4a1c6ffc2578c.png)
