--- a/product/安全服务/身份安全/多因子验证/快速入门/绑定手机移动令牌 .md
+++ b/product/安全服务/身份安全/多因子验证/快速入门/绑定手机移动令牌 .md
@@ -8,6 +8,6 @@
 2.通过手机扫描[ 创建测试用户 ](https://cloud.tencent.com/document/product/1326/60864) 中已获得的令牌激活二维码，绑定移动令牌。
 ![](https://main.qcloudimg.com/raw/937e0124edb41eced03b6237918e1af4.png)
 3.在成功绑定后，会在应用中看到动态 6 位移动令牌。 
->?更多关于腾讯身份验证器 App 使用方法，请参见 [腾讯身份验证器用户手册]()。
+>?更多关于腾讯身份验证器 App 使用方法，请参见 [腾讯身份验证器用户手册](https://mfa-prd-1302490086.cos.ap-nanjing.myqcloud.com/%E8%85%BE%E8%AE%AF%E8%BA%AB%E4%BB%BD%E9%AA%8C%E8%AF%81%E5%99%A8%EF%BC%88Tencent%20Authenticator%EF%BC%89%E8%BD%AF%E4%BB%B6%E7%94%A8%E6%88%B7%E6%89%8B%E5%86%8C.pdf)。
 >
 ![](https://main.qcloudimg.com/raw/cf2e5b2372ef30ef1fc3e8f144c6b593.png)
