--- a/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/对象操作.md
@@ -331,6 +331,52 @@ if (cos_status_is_ok(s)) {
 cos_pool_destroy(p);
 ```
 
+#### 示例4：上传对象（单链接限速）
+
+```cpp
+cos_pool_t *p = NULL;
+int is_cname = 0;
+cos_status_t *s = NULL;
+cos_request_options_t *options = NULL;
+cos_string_t bucket;
+cos_string_t object;
+cos_string_t file;
+cos_table_t *resp_headers = NULL;
+cos_table_t *headers = NULL;
+
+//创建内存池
+cos_pool_create(&p, NULL);
+
+//初始化请求选项
+options = cos_request_options_create(p);
+options->config = cos_config_create(options->pool);
+cos_str_set(&options->config->endpoint, TEST_COS_ENDPOINT);
+cos_str_set(&options->config->access_key_id, TEST_ACCESS_KEY_ID);
+cos_str_set(&options->config->access_key_secret, TEST_ACCESS_KEY_SECRET);
+cos_str_set(&options->config->appid, TEST_APPID);
+options->config->is_cname = is_cname;
+options->ctl = cos_http_controller_create(options->pool, 0);
+cos_str_set(&bucket, TEST_BUCKET_NAME);
+
+//限速值设置范围为819200 - 838860800，即100KB/s - 100MB/s，如果超出该范围将返回400错误
+headers = cos_table_make(p, 1);
+cos_table_add_int(headers, "x-cos-traffic-limit", 819200);
+
+//上传对象
+cos_str_set(&file, TEST_DOWNLOAD_NAME);
+cos_str_set(&object, TEST_OBJECT_NAME);
+s = cos_put_object_from_file(options, &bucket, &object, &file, headers, &resp_headers);
+if (cos_status_is_ok(s)) {
+    printf("put object succeeded\n");
+} else {
+    printf("put object failed\n");
+}
+
+//销毁内存池
+cos_pool_destroy(p); 
+```
+参考文档[单链接限速](https://cloud.tencent.com/document/product/436/40140)。
+
 ### 查询对象元数据
 
 #### 功能说明
@@ -443,7 +489,7 @@ cos_status_t *cos_get_object_to_file(const cos_request_options_t *options,
 | error_msg  | 错误码描述  | String |
 | req_id     | 请求消息 ID | String |
 
-#### 示例
+#### 示例1：普通下载
 
 ```cpp
 cos_pool_t *p = NULL;
@@ -482,6 +528,53 @@ if (cos_status_is_ok(s)) {
 //销毁内存池
 cos_pool_destroy(p); 
 ```
+
+#### 示例2：下载对象（单链接限速）
+
+```cpp
+cos_pool_t *p = NULL;
+int is_cname = 0;
+cos_status_t *s = NULL;
+cos_request_options_t *options = NULL;
+cos_string_t bucket;
+cos_string_t object;
+cos_string_t file;
+cos_table_t *headers = NULL;
+cos_table_t *resp_headers = NULL;
+
+//创建内存池
+cos_pool_create(&p, NULL);
+
+//初始化请求选项
+options = cos_request_options_create(p);
+options->config = cos_config_create(options->pool);
+cos_str_set(&options->config->endpoint, TEST_COS_ENDPOINT);
+cos_str_set(&options->config->access_key_id, TEST_ACCESS_KEY_ID);
+cos_str_set(&options->config->access_key_secret, TEST_ACCESS_KEY_SECRET);
+cos_str_set(&options->config->appid, TEST_APPID);
+options->config->is_cname = is_cname;
+options->ctl = cos_http_controller_create(options->pool, 0);
+cos_str_set(&bucket, TEST_BUCKET_NAME);
+
+//限速值设置范围为819200 - 838860800，即100KB/s - 100MB/s，如果超出该范围将返回400错误
+headers = cos_table_make(p, 1);
+cos_table_add_int(headers, "x-cos-traffic-limit", 819200);
+
+//获取对象
+cos_str_set(&file, TEST_DOWNLOAD_NAME);
+cos_str_set(&object, TEST_OBJECT_NAME);
+s = cos_get_object_to_file(options, &bucket, &object, headers, NULL, &file, &resp_headers);
+if (cos_status_is_ok(s)) {
+    printf("get object succeeded\n");
+} else {
+    printf("get object failed\n");
+}
+
+//销毁内存池
+cos_pool_destroy(p); 
+```
+参考文档[单链接限速](https://cloud.tencent.com/document/product/436/40140)。
+
 
 ### 设置对象复制（修改属性）
 
