--- a/product/企业协同/腾讯会议/操作指南/协作与互动/IM 与互动/会议投票.md
+++ b/product/企业协同/腾讯会议/操作指南/协作与互动/IM 与互动/会议投票.md
@@ -8,7 +8,7 @@
 
 ## 如何使用会议投票？
 ### 创建投票
-- **桌面端**：主持人/联席主持人可以在会中单击**工具箱 > 投票**进入投票列表界面，单击**创建投票**可设置投票内容，支持设置主题、主题描述、单选/多选、匿名/非匿名投票（每次投票最多支持添加10个选项）。
+- **桌面端**：主持人/联席主持人可以在会中单击**应用 > 投票**进入投票列表界面，单击**创建投票**可设置投票内容，支持设置主题、主题描述、单选/多选、匿名/非匿名投票（每次投票最多支持添加10个选项）。
 ![](https://main.qcloudimg.com/raw/17ad75842114d017ea301bef4c776047.png)
 - **移动端**：主持人/联席主持人可以在会中单击**更多 > 投票**进入投票列表界面，单击**创建投票**可设置投票内容，支持设置主题、主题描述、单选/多选、匿名/非匿名投票（每次投票最多支持添加10个选项）。
 
@@ -21,7 +21,7 @@
 ### 参与投票
 - 会议中，主持人/联席主持人已发起的投票，所有参会成员（除电话入会、小程序入会）可参与投票，并提交选项结果。
 - 主持人可以单击**返回列表 > 创建投票**再次创建新的投票。
-- 桌面端参会成员可以单击**工具箱 > 投票**查看已发起的投票列表。
+- 桌面端参会成员可以单击**应用 > 投票**查看已发起的投票列表。
 - 移动端参会成员可以在**更多 > 投票**处可查看已发起的投票列表。
 
 
