--- a/product/企业协同/腾讯会议/操作指南/协作与互动/屏幕共享/共享时批注协作.md
+++ b/product/企业协同/腾讯会议/操作指南/协作与互动/屏幕共享/共享时批注协作.md
@@ -21,7 +21,7 @@
 
 ## 参与批注
 ### Windows/Mac
-观看屏幕共享时，单击弹幕区“工具箱”中的**互动批注**，单击即可唤起批注工具栏进行批注。
+观看屏幕共享时，单击弹幕区**应用 > 互动批注**，单击即可唤起批注工具栏进行批注。
 ### Android/iOS
 观看屏幕共享时，单击**更多 > 互动批注**，即可唤起批注工具栏进行批注。
 
