--- a/product/大数据与AI/腾讯云小微/小微客服机器人/控制台指南/开通服务.md
+++ b/product/大数据与AI/腾讯云小微/小微客服机器人/控制台指南/开通服务.md
@@ -1,4 +1,4 @@
-在腾讯云小微 [控制台](https://console.cloud.tencent.com/prophet) 中，可以申请开通腾讯云小微客服机器人服务，详细步骤如下：
+在腾讯云小微控制台中，可以申请开通腾讯云小微客服机器人服务，详细步骤如下：
 如果您还没有注册腾讯云小微账号，您需要先注册一个小微账号。
 如果您已经注册了腾讯云小微账号，您可以直接跳过第一步。
 ### 注册腾讯云小微
