--- a/product/企业协同/腾讯会议/操作指南/音频和视频管理/视频/虚拟背景.md
+++ b/product/企业协同/腾讯会议/操作指南/音频和视频管理/视频/虚拟背景.md
@@ -55,7 +55,7 @@
 ### Windows/macOS
 1. 进入虚拟背景设置页面：
   - 单击主页右上角**设置 > 虚拟背景**。
-  - 会议中，单击“更多”中的“设置”，找到**虚拟背景**。
+  - 会议中，单击**应用 > 美颜 > 虚拟背景**。
   - 会议中，单击工具栏“开启视频”旁上拉箭头，找到**虚拟背景**。
 2. 您可以选择系统中预存的图片或视频作为会议虚拟背景，也可以选择背景虚化，并在预览视窗中浏览效果。
 3. 单击“+”，即可上传图片或视频作为您的会议虚拟背景，如果想要删除，则单击图片右上角的“x”即可。
