--- a/product/企业协同/腾讯会议/操作指南/音频和视频管理/直播/开启直播.md
+++ b/product/企业协同/腾讯会议/操作指南/音频和视频管理/直播/开启直播.md
@@ -24,7 +24,7 @@
 ## 开启直播
 1. 在预定会议时，设置直播相关参数：直播主题/直播简介/开启直播密码/允许观众讨论/开启直播回看（在 Web 端预定会议时，同样可以进行设置）。
 2. 进入会议中，打开视频或进行屏幕共享，以便获取直播画面。
-3. 单击工具栏中的**直播**，进入直播设置页，为直播添加视频画面（免费版用户首次使用直播前，需要进行人脸识别认证）。
+3. 单击工具栏中的**应用 > 直播**，进入直播设置页，为直播添加视频画面（免费版用户首次使用直播前，需要进行人脸识别认证）。
 4. 设置直播布局：
  - 腾讯会议桌面客户端目前支持将最多4个视频画面进行直播（1个大画面+3个小画面）。
  - 单击左侧直播布局中的**点击添加**，然后在右侧的实时画面中选中一个，即可将该画面添加到直播中。
