--- a/product/企业协同/腾讯会议/操作指南/音频和视频管理/直播/推流到第三方平台.md
+++ b/product/企业协同/腾讯会议/操作指南/音频和视频管理/直播/推流到第三方平台.md
@@ -20,7 +20,7 @@
 ## 操作步骤
 1. 进入会议中，打开视频或进行屏幕共享，以便获取直播画面。
 2. 直播设置：
- - 单击工具栏中的**直播**，进入直播设置页。
+ - 单击工具栏中的**应用 > 直播**，进入直播设置页。
  - 设置直播布局：
      - 腾讯会议桌面客户端目前支持将最多4个视频画面进行直播（1个大画面+3个小画面）。
      - 单击左侧直播布局中的**点击添加**，选择右侧其中一个实时画面，即可将该画面添加到直播中。
