--- a/product/企业协同/腾讯会议/操作指南/音频和视频管理/音频/音频选择与测试.md
+++ b/product/企业协同/腾讯会议/操作指南/音频和视频管理/音频/音频选择与测试.md
@@ -24,8 +24,8 @@
 - 选择完成后，分别单击右侧的**检测扬声器**和**检测麦克风**进行测试。
 
 ### 会议中测试
-- 会中单击底部工具栏的**更多 > 设置**进入设置页面。
-- 在设置页面中单击**音频**，进入”音频“页面，或者直接单击会中底部工具栏“选择音频/静音/解除静音”右侧的倒三角，直接进入“音频”页面。
+- 会中单击底部工具栏的**设置**进入设置页面。
+- 在设置页面中单击**音频**，进入“音频”页面，或者直接单击会中底部工具栏“静音/解除静音”右侧的倒三角，选择“音频选项”，直接进入“音频”页面。
 - 在扬声器和麦克风处，下拉选择您需要使用的设备。
 - 选择完成后，分别单击右侧的**检测扬声器**和**检测麦克风**进行测试。
 >!当您不选择任何音频接入方式的时候，您将无法在会议中发言和听到别人的讲话。
@@ -34,7 +34,7 @@
 ### 电脑音频接入
 “电脑音频”是指您直接使用电脑的麦克风和扬声器（耳机）作为会议音频接入方式加入会议，该种方式适合于小型会议，不受场景局限。当您举办大型会议时推荐您使用“电话拨入”作为音频接入方式，通话质量会更好。
 - 进入会议后，将弹出音频选择的弹窗，在弹窗上单击**电脑音频 > 使用电脑音频**即可。
-- 您也可以单击会议底部工具栏“选择音频/静音/解除静音”右侧的倒三角，选择**电脑音频**。
+- 您也可以单击会议底部工具栏“静音/解除静音”右侧的倒三角，选择**电脑音频**。
 - 您也可以在选择电脑音频的弹窗页面，勾选**入会时使用电脑音频**，则下次入会无需再次选择，会默认电脑音频接入。
 
 ### 电话拨入
