--- a/product/视频服务/实时音视频/常见问题/应对公司防火墙限制.md
+++ b/product/视频服务/实时音视频/常见问题/应对公司防火墙限制.md
@@ -35,8 +35,8 @@ query.tencent-cloud.com
 qcloud.rtc.qq.com
 ```
 
-### TRTC web端内网环境怎么设置代理？
-可采用 Nginx+coturn 代理方案，详情请参见 [TRTC web 端内网环境怎么设置代理](https://cloud.tencent.com/developer/article/1873981)。
+### TRTC web 端内网环境怎么设置代理？
+可采用 Nginx+coturn 代理方案，详情请参见 [云社区](https://cloud.tencent.com/developer/article/1873981)。
 
 | 方案名 | 适用场景                             | 网络要求                          |
 | :----- | :----------------------------------- | :-------------------------------- |
