--- a/product/计算与网络/无服务器云函数/操作指南/函数管理/函数概述.md
+++ b/product/计算与网络/无服务器云函数/操作指南/函数管理/函数概述.md
@@ -28,6 +28,12 @@
 
 除上述配置外，还可通过控制台编辑函数配置或 [更新函数配置](https://cloud.tencent.com/document/product/583/19806#.E6.9B.B4.E6.96.B0.E5.87.BD.E6.95.B0.E9.85.8D.E7.BD.AE) 修改以下内容，配置更多函数运行时的信息：
 - 内存：指定函数运行时可用的内存大小。最小64MB ，最大3072MB。从128MB起，以128MB为阶梯递增，默认128MB。SCF 的 CPU 处理能力与函数配置内存成正比，您可以增加或减少函数配置内存控制分配给函数的配置内存和 CPU 处理能力。
+- 初始化超时时间：指定函数初始化阶段最长运行时间，可选值范围为3秒-300秒，镜像部署函数默认90秒，其他函数默认60秒。
+<dx-alert infotype="notice" title="">
+- 函数初始化阶段包括准备函数代码、准备镜像、准备层等相关资源以及执行函数主流程代码。如果您的函数具有较大的镜像或复杂的函数主流程业务逻辑，请适当调大初始化超时时间。
+- 初始化超时时间仅在触发容器冷启动调用的场景下生效。
+- 客户端的等待时间建议稍大于初始化超时时间与执行超时时间的和。
+</dx-alert>
 - 执行超时时间：指定函数的最长运行时间，可选值范围为1秒- 900秒，默认3秒。
 - 环境变量：在配置中定义的环境变量可在函数运行时从环境中获取到。
 - 运行角色：将角色中包含的策略对应权限授权给函数。详情请查看 [权限管理](https://cloud.tencent.com/document/product/583/47933)。例如，函数代码中执行将某对象写入对象存储 COS 的动作，需要为该函数配置具有写 COS 权限的运行角色。
