--- a/product/管理与支持/计费相关(new)/购买流程/充值/对公转账.md
+++ b/product/管理与支持/计费相关(new)/购买流程/充值/对公转账.md
@@ -12,15 +12,17 @@
 >!
 > - 不支持添加含“&、=、%”字符的户名。
 > - 您最多可同时添加50个付款银行账号户名，实际打款的银行账号户名与其中任意一个户名相符即可校验入账。若实际打款的银行账号户名与您填写的户名不一致，将导致无法充值到账，请您**打款前务必填写正确有效的付款户名**。
+> - 请先添加汇款户名，即可查看您的专属收款账号。
 > ![](https://main.qcloudimg.com/raw/4b3539f7cb2ebcb34ae6bef7f36f3fc7.png)
 > 
-
 
 ### 2. 查看腾讯云银企直联专属收款账号
 
 在**对公汇款**中，添加完汇款户名后即可查看您的腾讯云专属收款账号，您可将专属账号信息免费发送至手机。
 
->! 每个腾讯云用户都有一个**唯一专属的、固定的**对公汇款专属账号（25位），腾讯云创建者账号与对公汇款专属账号**一 一对应**的关系，创建者账号与其名下的协作者账号所看到的专属收款账号是相同的。系统在收到银行汇款后将自动匹配到您的腾讯云账户并为您充值。
+>! 
+> - 每个腾讯云用户都有一个**唯一专属的、固定的**对公汇款专属账号（25位），腾讯云创建者账号与对公汇款专属账号**一 一对应**的关系，创建者账号与其名下的协作者账号所看到的专属收款账号是相同的。系统在收到银行汇款后将自动匹配到您的腾讯云账户并为您充值。
+> - 收款户名：腾讯云计算（北京）有限责任公司中的**括号为中文全角符号**。打款时请务必注意填写格式，防止因户名格式错误影响充值进度。
 > ![](https://main.qcloudimg.com/raw/4628ad23ae78d59f2779056622bcce5e.png)
 > 
 
