--- a/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备快速入门.md
+++ b/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备快速入门.md
@@ -20,7 +20,7 @@
 
 该部分操作可参考 [网关子设备产品](https://tcloud-doc.isd.com/document/product/1081/43417?!editLang=zh&!preview)
 
-### 步骤二. 运行设备端程序
+### 步骤二：运行设备端程序
 
 #### 2.1 下载demo程序
 
