--- a/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备快速入门.md
+++ b/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备快速入门.md
@@ -18,15 +18,16 @@
 
 #### 创建网关子设备产品，并将子设备绑定到网关设备下：
 
-该部分操作可参考 [网关子设备产品](https://tcloud-doc.isd.com/document/product/1081/43417?!editLang=zh&!preview)
+该部分操作可参考 [网关子设备产品管理](https://tcloud-doc.isd.com/document/product/1081/43417?!editLang=zh&!preview)
 
 ### 步骤二：运行设备端程序
 
-#### 2.1 下载demo程序
+#### 2.1 下载 demo 程序
 
 从[GitHub](https://github.com/tencentyun/qcloud-iot-explorer-sdk-embedded-c)下载，或执行下面的 git 命令。
-
-` git clone https://github.com/tencentyun/qcloud-iot-explorer-sdk-embedded-c.git`
+```
+git clone https://github.com/tencentyun/qcloud-iot-explorer-sdk-embedded-c.git
+```
 
 #### 2.2 代码编译
 
