--- a/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备产品.md
+++ b/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备产品.md
@@ -3,7 +3,7 @@
 对于 BLE、Zigbee 和485等不具备直接访问网络能力的设备，需要先接入网关，然后通过网关代理，间接实现设备接入腾讯物联网开发平台 IoT Explorer，具体流程框架图如下：
 ![](https://main.qcloudimg.com/raw/bcce392f4766673176d096f6d75cfe3b.svg)
 
-本文档指导您如何基于网关设备管理子设备，并代理子设备与物联网开发平台进行消息通信。
+本文档将指导您如何在平台管理网关与子产品的关联绑定关系以及网关设备与子设备的设备级拓扑关系。
 
 ## 操作步骤
 
