--- a/product/数据库/数据库审计/3.快速入门/使用简介.md
+++ b/product/数据库/数据库审计/3.快速入门/使用简介.md
@@ -4,42 +4,46 @@
 
 ## 审计操作
 ### 创建审计规则
-1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择【数据库审计】页，在上方选择地域后，选择【审计规则】页。
-2. 在审计规则页，单击【新建规则】。
+1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计规则**页。
+2. 在审计规则页，单击**新建规则**。
 ![](https://main.qcloudimg.com/raw/38f35a75c0ff9a254ece7d53d9fe197a.png)
-3. 在创建审计规则页，填写规则名称、描述，单击【下一步】。
-4. 在参数设置页，选择所需的审计方式和参数，单击【保存】。
+3. 在创建审计规则页，填写规则名称、描述，单击**下一步**。
+4. 在参数设置页，选择所需的审计方式和参数，单击**保存**。
 >?规则创建成功后，需关联审计策略才能生效。
 >
 ![](https://main.qcloudimg.com/raw/328fb7bf69b5fbb43f031a82548093fd.png)
 
 ### 开通 SQL 审计服务
-1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择【数据库审计】页，在上方选择地域后，选择【审计策略】页。
-2. 在审计策略页，选择需要开启审计的数据库实例，勾选相关协议，单击【下一步】。
+1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计策略**页。
+2. 在审计策略页，选择需要开启审计的数据库实例，勾选相关协议，单击**下一步**。
 ![](https://main.qcloudimg.com/raw/3e2df087df6798a533e66f19fa920479.png)
-3. 在 SQL 审计服务设置页，选择审计保存时长，单击【下一步】。
->!为保证满足安全合规性对 SQL 日志保留时长的要求，建议用户选择180天及以上的保存时长。
-4. 在创建策略页，设置策略名称，选择审计规则，单击【创建策略】。
+3. 在 SQL 审计服务设置页，选择审计保存时长，单击**下一步**。
+>?
+>- 审计日志保存时长支持选择7天、30天、6个月、1年、3年、5年。
+>- 为保证满足安全合规性对 SQL 日志保留时长的要求，建议用户选择180天及以上的保存时长。
+4. 在创建策略页，设置策略名称，选择审计规则，单击**创建策略**。
 
 ### 创建审计策略
-1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择【数据库审计】页，在上方选择地域后，选择【审计策略】页。
-2. 在审计策略页，单击【创建策略】。
+1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计策略**页。
+2. 在审计策略页，单击**创建策略**。
 ![](https://main.qcloudimg.com/raw/9c381277bf3f36129ad82929c9f85335.png)
-3. 在弹出的对话框，设置策略名称，选择审计规则，单击【确定】。
+3. 在弹出的对话框，设置策略名称，选择审计规则，单击**确定**。
 
 ### 查看审计日志
-1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择【数据库审计】页，在上方选择地域后，选择【审计日志】页。
-2. 在“审计实例”处，选择已经开启审计的数据库实例，即可查看对应的 SQL 审计日志。 
- - 单击“时间框”，选择时间段，可查看所选时间段内相关审计效果。
+1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计日志**页。
+2. 在**审计实例**处，选择已经开启审计的数据库实例，即可查看对应的 SQL 审计日志。 
+ - 单击“时间框”，选择时间段，可查看所选时间段内相关审计效果。搜索时间段不再受到24小时限制，可以选取存在数据的任意时间段进行搜索，最多展示符合条件的前 60000 条记录
  - 在“文本框”，输入关键标签进行搜索，可查看相关审计效果；输入关键 SQL 命令组合进行搜索，可查看相关审计效果。
 >?
 >- 在“文本框”输入多组关键标签进行搜索时，可使用回车键分割关键标签。
 >- 在“文本框”可输入 SQL 命令、客户端 IP、帐号、数据库、对象名、策略名、执行时间范围、影响行数等关键组合信息。
->
+>- 支持使用 * 作为条件进行筛选。如搜索 客户端 IP: 9.223.23.2\* 则匹配以9.223.23.2开头的IP地址。
+>对SQL命令字段进行过滤时，符号*不代表模糊匹配，SQL命令字段搜索均为模糊匹配查询
+>使用SQL类型进行过滤时，支持选择多个SQL类型进行过滤
 ![](https://main.qcloudimg.com/raw/22a9865d9fff99b39480e40a2cb5ead4.png)
 
 ## SQL 审计字段
-TencentDB for MySQL 的审计日志中支持如下字段。用户可以在 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql) 的【审计日志】页面单击如下图标，获取并查看完整的 SQL 审计日志。
+TencentDB for MySQL 的审计日志中支持如下字段。用户可以在 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql) 的**审计日志**页面单击如下图标，获取并查看完整的 SQL 审计日志。
 ![](https://main.qcloudimg.com/raw/a504bd3353af1c0fce27b223bda0003c.png)
 
 | 序号 | 字段名        | 字段含义                                                     | 备注                                         |
