--- a/product/安全服务/数字身份管控平台员工版/应用对接指南/应用管理/配置腾讯云应用.md
+++ b/product/安全服务/数字身份管控平台员工版/应用对接指南/应用管理/配置腾讯云应用.md
@@ -3,7 +3,7 @@
 2. 在应用管理页面，单击【应用市场新建】。
 ![](https://main.qcloudimg.com/raw/5df0ba019d711dbc3f0a47f71e9d4049.png)
 3. 在应用市场新建页面，选择腾讯云应用，单击【下一步：编辑应用信息】。
-4. 在应用市场新建页面，根据需求配置相关信息，单击【下一步：完成】。
+4. 在应用市场新建页面，根据需求配置相关信息，单击【下一步：完成】>【完成】，跳转至应用市场新建页面 。
 >?
 >- 账号 ID：是指腾讯云账号ID，从腾讯云账号信息中获取。
 >- 身份提供商名称：对应腾讯云创建的服务提供商名称。
@@ -13,7 +13,8 @@
 >  - 账号：表示创建的账号映射名，和腾讯云控制台创建的身份提供商当中的角色名相同。
 >
 ![](https://main.qcloudimg.com/raw/501a2ae129e0bafce08863dcff5c64bd.png)
-5. 在应用管理页面，单击刚刚创建的“腾讯云 应用名称” 。
-![](https://main.qcloudimg.com/raw/4668235f0f5acf0196524df0d9af4c0c.png)
-6. 在应用信息页面，单击【配置文件下载】，下载 radius-server 程序，并将该文件进行解压。
-![](https://main.qcloudimg.com/raw/a7df3609a49c2befb6fa44ef9d8f2f2f.png)
+5. 在应用市场新建页面，单击【应用配置】，进入腾讯云应用信息页面。
+![](https://main.qcloudimg.com/raw/c43426d18089bb37811ea3edbc16c687.png)
+6. 在应用信息页面，单击【导出 SAML 配置】,并点击“Ctrl+S”按键，保存 SAML 配置文件。
+![](https://main.qcloudimg.com/raw/6e9817be65d00365e4590db8bd2f877f.png)
+
