--- a/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备快速入门.md
+++ b/product/物联网/物联网开发平台/开发中心/网关设备接入/网关子设备快速入门.md
@@ -40,7 +40,9 @@ git clone https://github.com/tencentyun/qcloud-iot-explorer-sdk-embedded-c.git
 #### 2.3 运行程序
 
 1. 运行 gateway_sim_sample:
-`./output/release/bin/gateway_sim_sample `
+```
+./output/release/bin/gateway_sim_sample 
+```
 日志输出应该如下：
 ```
 INF|2021-07-06 15:42:58|qcloud_iot_device.c|iot_device_info_set(56): SDK_Ver: 3.1.6, Product_ID: XKVP9QORAR, Device_Name: test001
