--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/数据源.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/数据源.md
@@ -1,5 +1,5 @@
 ## 操作场景
-数据源帮助用户进行数据资产获取，需要获得资产的账号密码授权。数据源页面，为用户提供集中的资产管理和授权管理功能。推荐用户开通 [数据安全中心](https://cloud.tencent.com/document/product/1087/56736)，可以自动同步资产，同时也支持自主管理资产。
+数据脱敏需要获得资产的账号密码授权。数据源页面，为用户提供集中的资产管理和授权管理功能。推荐用户开通 [数据安全中心](https://cloud.tencent.com/document/product/1087/56736)，可以自动同步资产，同时也支持自主管理资产。
 
 
 ## 操作步骤
