--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -15,8 +15,8 @@
  1. 任务基本信息：输入任务名称和备注，单击【下一步】。
  2. 脱敏源配置：选择脱敏源资产来源、数据源和数据抽取方式，单击【下一步】。	
 >?
->- 脱敏源资产来源：Tencent BD和 CVM 自建数据库。
->- 数据源：对应 Tencent BD和 CVM 自建数据库下的数据资产（没有开启脱敏权限的资产，不可设置脱敏任务）。
+>- 脱敏源资产来源：Tencent DB和 CVM 自建数据库。
+>- 数据源：对应 Tencent DB和 CVM 自建数据库下的数据资产（没有开启脱敏权限的资产，不可设置脱敏任务）。
 >- 数据抽取方式：根据实际需求，选择指定表脱敏或抽样 SQL。
 >
 ![](https://main.qcloudimg.com/raw/6d93455750fac374a54a0f1c14716e3d.png)
