--- a/product/物联网/物联云IoT Hub/设备端接入手册/设备接入概述.md
+++ b/product/物联网/物联云IoT Hub/设备端接入手册/设备接入概述.md
@@ -17,7 +17,7 @@
 - [C SDK 使用说明](https://cloud.tencent.com/document/product/634/38255)。
 - [Android SDK 使用说明](https://cloud.tencent.com/document/product/634/48018)。
 - [Java SDK 使用说明](https://cloud.tencent.com/document/product/634/48020)。
-- [Python SDK 使用说明](https://cloud.tencent.com/document/product/634/60638)
+- [Python SDK 使用说明](https://cloud.tencent.com/document/product/634/60638)。
 
 >?物联网通信支持自定义接入，设备只需按照平台提供的协议及认证流程，即可完成设备的自定义接入。
 
