--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -4,7 +4,7 @@
 
 ## 操作步骤
 ### 任务列表管理
-1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/auth)，单击脱敏任务菜单下的【任务管理】，进入任务管理页面。
+1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/task)，单击脱敏任务菜单下的【任务管理】，进入任务管理页面。
 2. 在任务管理页面，可查看内容包括任务名称、任务创建账号、源资产、目标资产、创建时间、触发方式、执行次数、是否启用、操作等信息。
 3. 在任务管理页面，可以进行相关操作，每个页面默认展示10条数据，可按照不同触发方式、时间及任务名称/创建账号/数据库名称来检索。
 ![](https://main.qcloudimg.com/raw/93d912f3e9c12dd6f832502f5aa19a36.png)
