--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务运行状况.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务运行状况.md
@@ -3,7 +3,7 @@
 已完成 [资产授权](https://cloud.tencent.com/document/product/882/61177) 且开启脱敏权限。
 
 ## 操作步骤
-1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/auth)，单击脱敏任务菜单下的【任务运行状况】，进入任务运行状况页面。
+1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/task-health)，单击脱敏任务菜单下的【任务运行状况】，进入任务运行状况页面。
 2. 在任务运行状况页面，可查看执行详情，同时可以进行相关操作，每个页面默认展示10条数据，可按照执行方式不同、扫描状态、日期来检索任务情况。
 ![](https://main.qcloudimg.com/raw/c0070a95725887ca55e894e3aa2e3e6e.png)
 3. 在任务运行状况页面，可查看单条任务的详情，操作栏单击【执行详情】，右侧弹出任务执行详情页面。
