--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏规则/规则模板.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏规则/规则模板.md
@@ -1,6 +1,6 @@
 
 ### 新增规则模板
-1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/auth)，单击脱敏规则菜单下的【规则模板】，进入规则模板页面。
+1. 登录 [数据脱敏控制台](https://console.cloud.tencent.com/dmask/rules-templates)，单击脱敏规则菜单下的【规则模板】，进入规则模板页面。
 2. 在规则模板页面，单击【新建模板】，弹出添加新建模板弹窗。
 ![](https://main.qcloudimg.com/raw/d5ce46ac83b53ab3110a8e502be7e900.png)
 3. 在添加新建模板弹窗中，输入模板名称、选择匹配方式、设置敏感类型、脱敏算法，单击【确定】，即可保存成功。
