--- a/product/计算与网络/Serverless Framework/最佳实践/部署全景录制.md
+++ b/product/计算与网络/Serverless Framework/最佳实践/部署全景录制.md
@@ -140,6 +140,7 @@ Content-Type: application/json
 | Width           | number | 否   | 录制画面宽度，默认为1280，合法取值范围[0, 2560]            |
 | Height          | number | 否   | 录制画面高度，默认为720，合法取值范围[0, 2560]             |
 | CallbackURL     | string | 否   | 录制结果通知回调地址                                         |
+| StorageType | string | 否 | 录制过程中中间态 webm 文件的存储位置，可选参数为`cos` ，不填写默认为`cfs`。（如果环境变量配置了参数 COS_BUCKET_RAW，则会写在这个桶里面，不配置会写在目标存储桶的 raw 路径下）|
 | MaxDurationLimit | int    | 否   | 录制最大时长限制， 单位s, 合法取值范围[0, 36000]，默认21600s（6小时），超过6小时需要配置永久密钥 |
  | Output         | object | 否   | 请求协议参数          
 | Cos             | object | 否   | 请求协议参数                                                 |
@@ -149,7 +150,7 @@ Content-Type: application/json
 | TargetDir       | string | 否   | 录制文件存放路径，不设置默认为 taskid                       |
 | TargetName      | string | 否   | 录制文件名称，不设置为结束时间戳                             |
    | Video      | object | 否   | 请求协议参数                           |
-  |  Muxer     | string | 否   | 录制文件格式，可选hls、mp4，不写默认为mp4                              |
+  |  Muxer     | string | 否   | 录制文件格式，可选 hls、mp4，不写默认为 mp4                              |
   |    EncryptKey   | string | 否   | hls加密公钥，不设置默认不加密。                            |
   |    AuthUrl   | string | 否   | 解密私钥地址，设置公钥的情况下必填参数。                             |
 
