--- a/product/监控与管理/云拨测（新）/产品简介/产品优势.md
+++ b/product/监控与管理/云拨测（新）/产品简介/产品优势.md
@@ -1,11 +1,11 @@
 ### 丰富的拨测节点资源
 
-云拨测支持全球监测网络，包括不同城市（中国境内和境外）、不同运营商（中国移动、中国联通、中国电信等）、不同终端（机房、网民、移动端）、不同网络条件（3G、4G、5G、WIFI）。
+云拨测支持全球监测网络，包括不同城市（中国境内和境外）、不同运营商（中国移动、中国联通、中国电信等）、不同终端（机房、网民、移动端）、不同网络条件（3G、4G、WIFI）。
 PC拨测点：
  - IDC终端拨测点：国内覆盖100+主要城市100个数据中心节点，国外覆盖65+主要城市150个数据中心节点。
  - PC用户终端拨测点：国内覆盖200+主要城市，国外覆盖50+城市，200+城市运营商。
  
-手机拨测网络：覆盖100+主要城市，7500+部真实手机，国外覆盖65+主要城市150个数据中心节点，移动终端设备接入：4G、5G。
+手机拨测网络：覆盖100+主要城市，7500+部真实手机，国外覆盖65+主要城市150个数据中心节点，移动终端设备接入：4G。
 
 ### 无侵入式监控
 
