--- a/product/监控与管理/云拨测（新）/常见问题/常见问题.md
+++ b/product/监控与管理/云拨测（新）/常见问题/常见问题.md
@@ -18,7 +18,7 @@
 
 ### 云拨测监测的原理和使用的技术是什么？
 
-原理：利用分布于全球监测网络，包括不同城市（中国境内和境外）、不同运营商（中国移动、中国联通、中国电信等）、不同终端（机房、网民、移动端）、不同网络条件（3G、4G、5G、WIFI），主动对应用进行体验测试，获得应用运行的各项性能指标。
+原理：利用分布于全球监测网络，包括不同城市（中国境内和境外）、不同运营商（中国移动、中国联通、中国电信等）、不同终端（机房、网民、移动端）、不同网络条件（3G、4G、WIFI），主动对应用进行体验测试，获得应用运行的各项性能指标。
 技术：无侵入式，无需技术嵌码。
 
 ### 修改应用的内容是否会影响监测？
