--- a/product/视频服务/实时音视频/产品动态.md
+++ b/product/视频服务/实时音视频/产品动态.md
@@ -1,3 +1,28 @@
+## 2021年09月
+<table>
+<tr><th width="20%">动态名称</th>  <th width="50%">动态描述</th>  <th width="15%">发布时间</th>  <th width="15%">相关文档</th>
+</tr><tr>
+<td>Version 9.1  版本发布</td>
+<td>全平台：<ul style="margin:0">
+	<li>C++ 接口支持音频帧回调格式设置。</li>
+	<li>优化弱网下音视频体验。</li>
+</ul><br>Windows：<ul style="margin:0">
+	<li>播片增加 ac3 格式的支持。</li>
+	<li>摄像头信息支持获取支持的分辨率列表，具体请参见 <a href="https://liteav.sdk.qcloud.com/doc/api/zh-cn/group__TXDeviceManager__cplusplus.html#ad502f48cb2a4470943134e4b48904450">ITXDeviceCollection.getDeviceProperties</a>。</li>
+	<li>支持 Nvidia、Intel、AMD 硬解。</li>
+</ul><br>Mac：<ul style="margin:0">
+新增本地媒体录制支持。
+</ul><br>Android：<ul style="margin:0">
+	<li>优化退房时的音频状态管理。</li>
+	<li>优化音频采集启动失败后的恢复逻辑，提升成功率。</li>
+	<li>优化特定条件下视频画面过曝的问题。</li>
+</ul></td>
+<td>2021-09-04</td>
+<td><a href="https://cloud.tencent.com/document/product/647/32689">SDK 下载</a></td>
+</tr>
+</table>
+
+
 ## 2021年08月
 <table>
 <tr><th width="20%">动态名称</th>  <th width="50%">动态描述</th>  <th width="15%">发布时间</th>  <th width="15%">相关文档</th>
