--- a/product/大数据与AI/弹性MapReduce/产品简介/组件版本.md
+++ b/product/大数据与AI/弹性MapReduce/产品简介/组件版本.md
@@ -1,4 +1,4 @@
-腾讯云弹性 MapReduce 由一系列大数据生态的开源应用程序组成。支持部署五种集群类型：HADOOP 集群、DRUID 集群、CLICKHOUSE 集群、KAFKA 集群、DORIS 集群，每个弹性 MapReduce 的版本，包含了一组特定版本的开源程序。当您在创建集群时，可以选择对应的 EMR 版本，以满足您对其中包含的开源组件的版本需求。
+﻿腾讯云弹性 MapReduce 由一系列大数据生态的开源应用程序组成。支持部署五种集群类型：HADOOP 集群、DRUID 集群、CLICKHOUSE 集群、KAFKA 集群、DORIS 集群，每个弹性 MapReduce 的版本，包含了一组特定版本的开源程序。当您在创建集群时，可以选择对应的 EMR 版本，以满足您对其中包含的开源组件的版本需求。
 
 EMR 提供的组件版本有两种类型，一是标准版本，主要依托开源社区稳定组件版本提供服务，如果您希望与跟社区演进保持一致推荐您选择标准版本；二是天穹版本，此版本在开源社区组件稳定版本的基础上，融入了腾讯云自研、成熟稳定的特性和功能，带来性能及稳定性的提升。请在选型初期根据您的情况进行选择，不建议在使用期间进行标准版和天穹版的切换。
 
@@ -34,7 +34,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | -------------------------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
 | 发布时间                   | -           | -           | 2019.05     | 2020.03     | 2020.05     | 2020.08     | 2020.09     | 2021.04     | 2021.07     |
 | Hadoop（必选组件）         | 2.7.3       | 2.7.3       | 2.8.4       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       |
-| Spark_Hadoop               | 2.7 2.0.2    | 2.7 2.2.1    | 2.8 2.3.2    | 2.8 2.4.3    | 2.8 2.4.3    | 2.8 3.0.0    | 2.8 3.0.0    | -           | -           |
+| Spark_Hadoop               | 2.7 2.0.2   | 2.7 2.2.1   | 2.8 2.3.2   | 2.8 2.4.3   | 2.8 2.4.3   | 2.8 3.0.0   | 2.8 3.0.0   | -           | -           |
 | Spark                      | -           | -           | -           | -           | -           | -           | -           | 3.0.0       | 3.0.2       |
 | Hive                       | 2.1.1       | 2.3.2       | 2.3.3       | 2.3.5       | 2.3.5       | 2.3.7       | 2.3.7       | 2.3.7       | 2.3.7       |
 | Tez                        | 0.8.5       | 0.8.5       | 0.8.5       | 0.9.2       | 0.9.2       | 0.9.2       | 0.9.2       | 0.9.2       | 0.9.2       |
@@ -68,34 +68,34 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 
 **Hadoop3.x 标准版本支持组件产品版本如下：**
 
-| 组件名称              | EMR-V 3.0.0 | EMR-V 3.1.0 | EMR-V 3.2.0 |
-| --------------------- | ----------- | ----------- | ----------- |
-| 发布时间              | 2019.11     | 2020.12     | 2021.04     |
-| Hadoop（必选）        | 3.1.2       | -           | -           |
-| HDFS（必选）          | -           | 3.1.2       | 3.2.2       |
-| Yarn（必选）          | -           | 3.1.2       | 3.2.2       |
-| Spark\_ Hadoop        | 3.12.4.3    | -           | -           |
-| Spark                 | -           | 2.4.3       | 3.0.2       |
-| Hive                  | 3.1.1       | 3.1.1       | 3.1.2       |
-| Tez                   | 0.9.2       | 0.9.2       | 0.10.0      |
-| Presto                | 0.222       | -           | -           |
-| PrestoSQL             | -           | 332         | 350         |
-| Flink                 | 1.8.1       | 1.10.0      | 1.12.1      |
-| Hbase                 | 2.2.0       | 2.3.3       | 2.3.3       |
-| Hue                   | 4.4.0       | 4.4.0       | 4.4.0       |
-| Sqoop                 | 1.4.7       | 1.4.7       | 1.4.7       |
-| Oozie                 | 5.1.0       | 5.1.0       | 5.1.0       |
-| Ranger                | 2.0.0       | 2.0.0       | 2.1.0       |
-| Zookeeper（必选组件） | 3.4.9       | 3.6.1       | 3.6.1       |
-| Flume                 | 1.9.0       | 1.9.0       | 1.9.0       |
-| Impala                | 2.10.0      | 3.4.0       | 3.4.0       |
-| Alluxio               | 1.8.1       | 2.3.0       | 2.5.0       |
-| Knox（必选组件）      | 1.2.0       | 1.2.0       | 1.2.0       |
-| Kudu                  | -           | 1.13.0      | 1.13.0      |
-| Kerberos              | 1.15.1      | 1.15.1      | 1.51.1      |
-| Zeppelin              | -           | 0.8.2       | 0.9.1       |
-| hudi                  | -           | -           | 0.7.0       |
-| iceberg               | -           | -           | 0.11.0      |
+| 组件名称              | EMR-V 3.0.0 | EMR-V 3.1.0 | EMR-V 3.2.0 | EMR-V 3.2.1
+| --------------------- | ----------------- | --------------- | ----------------- |--------------- |
+| 发布时间              | 2019.11     | 2020.12     | 2021.04     | 2021.07 |
+| Hadoop（必选）        | 3.1.2       | -           | -                 |   -         |
+| HDFS（必选）          | -           | 3.1.2       | 3.2.2       |3.2.2       |
+| Yarn（必选）          | -           | 3.1.2       | 3.2.2         |3.2.2       |
+| Spark\_ Hadoop        | 3.12.4.3    | -           | -           | -            |
+| Spark                 | -           | 2.4.3       | 3.0.2           | 3.0.2       |
+| Hive                  | 3.1.1       | 3.1.1       | 3.1.2         |  3.1.2       |
+| Tez                   | 0.9.2       | 0.9.2       | 0.10.0       | 0.10.0      |
+| Presto                | 0.222       | -           | -               |  -            |
+| PrestoSQL             | -           | 332         | 350         | 350         |
+| Flink                 | 1.8.1       | 1.10.0      | 1.12.1      | 1.12.1      |
+| Hbase                 | 2.2.0       | 2.3.3       | 2.3.3       | 2.3.3       |
+| Hue                   | 4.4.0       | 4.4.0       | 4.4.0       | 4.4.0       |
+| Sqoop                 | 1.4.7       | 1.4.7       | 1.4.7       | 1.4.7       |
+| Oozie                 | 5.1.0       | 5.1.0       | 5.1.0       | 5.1.0       |
+| Ranger                | 2.0.0       | 2.0.0       | 2.1.0       |2.1.0       |
+| Zookeeper（必选组件） | 3.4.9 | 3.6.1     | 3.6.1       |3.6.1       |
+| Flume                 | 1.9.0       | 1.9.0       | 1.9.0       |1.9.0       |
+| Impala                | 2.10.0      | 3.4.0       | 3.4.0       | 3.4.0       |
+| Alluxio               | 1.8.1       | 2.3.0       | 2.5.0       | 2.5.0       |
+| Knox（必选组件）      | 1.2.0  | 1.2.0     | 1.2.0       | 1.2.0       |
+| Kudu                  | -           | 1.13.0      | 1.13.0      | 1.13.0      |
+| Kerberos              | 1.15.1      | 1.15.1  | 1.51.1      |1.51.1      |
+| Zeppelin              | -           | 0.8.2       | 0.9.1       | 0.9.1       |
+| iceberg               | -           | -           | 0.11.0      |0.11.0      |
+| OpenLDAP         | -           | -           |  -             |2.4.44      |
 
 **DRUID 集群已支持组件产品版本如下：**
 
