--- a/product/视频服务/播放器/快速入门/快速入门.md
+++ b/product/视频服务/播放器/快速入门/快速入门.md
@@ -27,7 +27,7 @@
 下面将为您介绍 App 端不同播放器的特点及使用场景，帮助您选择适合自己的播放器类型。
 
 <table>
-<tr><th>播放器</th><th>说明</th><th width=30%>参考文档</th></tr>
+<tr><th width=14%>播放器</th><th>说明</th><th width=27%>参考文档</th></tr>
 <tr>
 <td>超级播放器</td>
 <td>超级播放器适用于直播和点播，是集视频信息拉取、横竖屏切换、清晰度选择、弹幕、直播时移、小窗播放等功能于一体的解决方案标组件，且完全开源。帮助您在短时间内，打造一个媲美市面上各种流行视频 App 的播放软件。</td>
@@ -39,10 +39,10 @@
 </tr><tr>
 <td>超级播放器 Adapter</td>
 <td>超级播放器 Adapter 为云点播提供给客户希望使用第三方播放器或自研播放器开发的对接云 PaaS 资源的播放器插件，常用于有自定义播放器功能需求的用户，有一定的技术接入门槛。</td>
-<td>
+<td><ul style="margin:0">
     <li/><a href="https://cloud.tencent.com/document/product/881/20209">iOS 超级播放器 Adapter</a>
     <li/><a href="https://cloud.tencent.com/document/product/881/20214">Android 超级播放器 Adapter</a>
-</td>
+</ul></td>
 </tr><tr>
 <td>定制开发</td>
 <td>超级播放器提供了最通用的播放器功能，如果不能满足需求，您可以自行修改播放代码。<br>如果您对播放的定制不仅限于 UI，需要进行更深层次的定制，您可以参考定制开发内容，了解播放器更底层的用法。</td>
