--- a/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
+++ b/product/安全服务/敏感数据处理/操作指南/数据脱敏 SaaS 型/脱敏任务/任务管理.md
@@ -22,7 +22,10 @@
 ![](https://main.qcloudimg.com/raw/6d93455750fac374a54a0f1c14716e3d.png)
  3. 目标位置配置：选择目标源资产来源和数据源，单击【下一步】。
  4. 脱敏规则：选择规则模板，或者单击![](https://main.qcloudimg.com/raw/4c4822aee38639f16243efce474ae917.png)启用强制应用模板，单击【下一步】。
->?可以借助规则模板，进行快速配置。
+>?
+>- 规模模板选择：可以借助规则模板，进行快速配置。单击【设置规则模板】，跳转至规则模板页面；或手动设置源表名、目标表名下的列表开启脱敏及设置脱敏算法。
+>![](https://main.qcloudimg.com/raw/ed5711a6e2cfceeb23fa17db138853f1.png)
+>- 强制应用模板：开启强制应用模板时，任务配置页面无法修改算法参数，可在模板配置中进行修改，配置将同步到任务。
 >
  ![](https://main.qcloudimg.com/raw/34ad4c09b9ad680a5dc0bae42883b5a4.png)
  5. 处理逻辑确认：根据实际需求，选择触发方式、触发周期和时间设定等信息，单击【下一步】。
