--- a/product/安全服务/威胁情报云查服务/产品简介/产品概述.md
+++ b/product/安全服务/威胁情报云查服务/产品简介/产品概述.md
@@ -9,7 +9,7 @@
 ### 基础分析接口
 基础分析接口提供对 IP、域名、Hash、URL 的基础分析检测能力。
 #### IP 入站（WAF 查询）情报
-针对入站场景的 IP进行分析， 能够提供 IP的地理位置、 ASN信息，通过判定规则精准判别 IP是否恶意、风险严重级别、可信度级别；识别威胁类型，例如如：漏洞利用（ Exploit）、 傀儡机（Zombie）、代理（Proxy）、可疑（Suspicious）等及相关安全事件或团及相关安全事件或团伙标签。
+针对入站场景的 IP进行分析， 能够提供 IP的地理位置、 ASN信息，通过判定规则精准判别 IP是否恶意、风险严重级别、可信度级别；识别威胁类型，例如：漏洞利用（ Exploit）、 傀儡机（Zombie）、代理（Proxy）、可疑（Suspicious）等及相关安全事件或团及相关安全事件或团伙标签。
 
 #### IP 信誉情报
 可针对业务日志，以及从防火墙、 WAF 等基础安全防护设备中获取的外部 IP，进行分析。获取 IP 相关地理位置、ASN 信息，综合判定威胁类型如:远控（C2）、傀儡机（Zombie）、失陷主机（Compromised）、扫描（Scanner）、钓鱼（Phishing）等，相关攻击团伙或安全事件标签，原始情报，相关样本信息等。
