--- a/product/大数据与AI/弹性MapReduce/产品简介/组件版本.md
+++ b/product/大数据与AI/弹性MapReduce/产品简介/组件版本.md
@@ -32,8 +32,8 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | 组件名称                   | EMR-V 1.3.1 | EMR-V 2.0.1 | EMR-V 2.1.0 | EMR-V 2.2.0 | EMR-V 2.3.0 | EMR-V 2.4.0 | EMR-V 2.5.0 | EMR-V 2.5.1 | EMR-V 2.6.0 |
 | -------------------------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |
 | 发布时间                   | -           | -           | 2019.05     | 2020.03     | 2020.05     | 2020.08     | 2020.09     | 2021.04     | 2021.07     |
-| Hadoop（必选组件）         | 2.7.3       | 2.7.3       | 2.8.4       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       |
-| Spark_Hadoop               | 2.7 2.0.2   | 2.7 2.2.1   | 2.8 2.3.2   | 2.8 2.4.3   | 2.8 2.4.3   | 2.8 3.0.0   | 2.8 3.0.0   | -           | -           |
+| Hadoop（必选组件）       | 2.7.3       | 2.7.3       | 2.8.4       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       | 2.8.5       |
+| Spark_Hadoop    | 2.7 2.0.2   | 2.7 2.2.1   | 2.8 2.3.2   | 2.8 2.4.3   | 2.8 2.4.3   | 2.8 3.0.0   | 2.8 3.0.0   | -           | -           |
 | Spark                      | -           | -           | -           | -           | -           | -           | -           | 3.0.0       | 3.0.2       |
 | Hive                       | 2.1.1       | 2.3.2       | 2.3.3       | 2.3.5       | 2.3.5       | 2.3.7       | 2.3.7       | 2.3.7       | 2.3.7       |
 | Tez                        | 0.8.5       | 0.8.5       | 0.8.5       | 0.9.2       | 0.9.2       | 0.9.2       | 0.9.2       | 0.9.2       | 0.9.2       |
@@ -48,7 +48,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | Sqoop                      | 1.4.6       | 1.4.6       | 1.4.7       | 1.4.7       | 1.4.7       | 1.4.7       | 1.4.7       | 1.4.7       | 1.4.7       |
 | Oozie                      | 4.3.1       | 4.3.1       | 4.3.1       | 5.1.0       | 5.1.0       | 5.1.0       | 5.1.0       | 5.1.0       | 5.1.0       |
 | Ranger                     | -           | 0.7.1       | 0.7.1       | 1.2.0       | 1.2.0       | 1.2.0       | 1.2.0       | 1.2.0       | 1.2.0       |
-| Zookeeper（必选组件）      | 3.4.9       | 3.4.9       | 3.4.9       | 3.5.5       | 3.5.5       | 3.6.1       | 3.6.1       | 3.6.1       | 3.6.1       |
+| ZooKeeper（必选组件）  | 3.4.9       | 3.4.9       | 3.4.9       | 3.5.5       | 3.5.5       | 3.6.1       | 3.6.1       | 3.6.1       | 3.6.1       |
 | Flume                      | -           | -           | 1.8.0       | 1.9.0       | 1.9.0       | 1.9.0       | 1.9.0       | 1.9.0       | 1.9.0       |
 | Impala                     | -           | -           | -           | 2.10.0      | 2.10.0      | 2.10.0      | 2.10.0      | 2.10.0      | 3.4.0       |
 | Kylin                      | -           | -           | -           | 2.5.2       | 2.5.2       | 2.5.2       | 2.5.2       | 2.5.2       | 2.5.2       |
@@ -62,7 +62,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | TensorFlowSpark            | -           | -           | -           | -           | 1.4.4       | 1.4.4       | 1.4.4       | 1.4.4       | 1.4.4       |
 | Jupyter                    | -           | -           | -           | -           | 4.6.3       | 4.6.3       | 4.6.3       | 4.6.3       | 4.6.3       |
 | Kudu                       | -           | -           | -           | -           | -           | 1.12.0      | 1.12.0      | 1.12.0      | 1.12.0      |
-| OpenLDAP（必选组件）                    | -           | -           | -           | -           | -           | -           | -           | -           | 2.4.44      |
+| OpenLDAP（必选组件）         | -           | -           | -           | -           | -           | -           | -           | -           | 2.4.44      |
 
 
 **Hadoop3.x 标准版本支持组件产品版本如下：**
@@ -85,7 +85,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | Sqoop                 | 1.4.7       | 1.4.7       | 1.4.7       | 1.4.7       |
 | Oozie                 | 5.1.0       | 5.1.0       | 5.1.0       | 5.1.0       |
 | Ranger                | 2.0.0       | 2.0.0       | 2.1.0       |2.1.0       |
-| Zookeeper（必选组件） | 3.4.9 | 3.6.1     | 3.6.1       |3.6.1       |
+| ZooKeeper（必选组件） | 3.4.9 | 3.6.1     | 3.6.1       |3.6.1       |
 | Flume                 | 1.9.0       | 1.9.0       | 1.9.0       |1.9.0       |
 | Impala                | 2.10.0      | 3.4.0       | 3.4.0       | 3.4.0       |
 | Alluxio               | 1.8.1       | 2.3.0       | 2.5.0       | 2.5.0       |
@@ -103,7 +103,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | 发布时间              | 2020.04       |
 | Hadoop（必选组件）    | 2.8.5         |
 | Druid（必选组件）     | 0.17.0        |
-| Zookeeper（必选组件） | 3.5.5         |
+| ZooKeeper（必选组件） | 3.5.5         |
 | Knox（必选组件）      | 1.2.0         |
 | Superset              | 0.35.2        |
 | Ganglia               | 3.7.2         |
@@ -113,8 +113,8 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | 组件名称               | CLICKHOUSE-V 1.0.0 | CLICKHOUSE-V 1.1.0 |
 | ---------------------- | ------------------ | ------------------ |
 | 发布时间               | 2020.04            | 2020.05            |
-| Clickhouse（必选组件） | 19.16.12.49        | 20.3.10.75         |
-| Zookeeper（必选组件）  | 3.4.9              | 3.4.9              |
+| ClickHouse（必选组件） | 19.16.12.49        | 20.3.10.75         |
+| ZooKeeper（必选组件）  | 3.4.9              | 3.4.9              |
 | Superset               | -                  | 0.35.2             |
 
 **KAFKA 集群已支持组件产品版本如下：**
@@ -125,7 +125,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | Kafka（必选组件）        | 1.1.1         |
 | KafkaManager（必选组件） | 2.0.0.2       |
 | Knox（必选组件）         | 1.2.0         |
-| Zookeeper（必选组件）    | 3.6.1         |
+| ZooKeeper（必选组件）    | 3.6.1         |
 
 **DORIS 集群已支持组件产品版本如下：**
 
@@ -158,7 +158,7 @@ Hadoop 集群分标准版本和天穹版本，两者版本区别详情可参考 
 | Sqoop                 | 1.4.7                |
 | Oozie                 | 5.1.0                |
 | Ranger                | 1.2.0                |
-| Zookeeper（必选组件） | 3.6.1                |
+| ZooKeeper（必选组件） | 3.6.1                |
 | Flume                 | 1.9.0                |
 | Impala                | 2.10.0               |
 | Kylin                 | 2.5.2                |
