--- a/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭装修行业小程序模板.md
+++ b/product/移动与通信/云开发低代码平台/微搭应用市场/模板使用说明/微搭装修行业小程序模板.md
@@ -16,23 +16,23 @@
    </tr>
 	 <tr>
       <td>首页导航</td>
-      <td><li>导航新增/查看/编辑/删除</li>导航详情</li></td>
+      <td><li>导航新增/查看/编辑/删除</li><li>导航详情</li></td>
    </tr>
 	 	<tr>
       <td>精品案例</td>
-      <td><li>精品案例新增/查看/编辑/删除</li>精品案例详情</li></td>
+      <td><li>精品案例新增/查看/编辑/删除</li><li>精品案例详情</li></td>
    </tr> 
 	 	<tr>
       <td>专题活动</td>
-      <td><li>专题活动新增/查看/编辑/删除</li>专题活动详情</li></td>
+      <td><li>专题活动新增/查看/编辑/删除</li><li>专题活动详情</li></td>
    </tr>
 	 	<tr>
       <td>资讯中心</td>
-      <td><li>资讯新增/查看/编辑/删除 </li>资讯详情</li></td>
+      <td><li>资讯新增/查看/编辑/删除 </li><li>资讯详情</li></td>
    </tr>
 	 	<tr>
       <td>关于我们</td>
-      <td><li>装修公司介绍新增/查看/编辑/删除</li>介绍详情</li></td>
+      <td><li>装修公司介绍新增/查看/编辑/删除</li><li>介绍详情</li></td>
    </tr>
 	 	<tr>
       <td>联系方式</td>
