--- a/product/移动与通信/即时通信/11错误码.md
+++ b/product/移动与通信/即时通信/11错误码.md
@@ -340,7 +340,7 @@
 | 10010  | 群组不存在，或者曾经存在过，但是目前已经被解散。             |
 | 10011  | 解析 JSON 包体失败，请检查包体的格式是否符合 JSON 格式。     |
 | 10012  | 发起操作的 UserID 非法，请检查发起操作的用户 UserID 是否填写正确。 |
-| 10013  | 被邀请加入的用户已经是群成员。                               |
+| 10013  |用户已经是群成员。                               |
 | 10014  | 群已满员，无法将请求中的用户加入群组，如果是批量加人，可以尝试减少加入用户的数量。 |
 | 10015  | 群组 ID 非法，请检查群组 ID 是否填写正确。                   |
 | 10016  | App 后台通过第三方回调拒绝本次操作。                         |
