--- a/product/教育/云课堂/产品简介/产品概述.md
+++ b/product/教育/云课堂/产品简介/产品概述.md
@@ -1,4 +1,4 @@
-﻿云课堂是为不同规模机构提供 SaaS 和 APaaS 方案的在线互动课堂产品，利用腾讯云的技术能力，实现极速开课、多向互动、智能沉淀、一键分发等产品功能，为教育机构提供高稳定高性价比的线上互动课堂服务。
+云课堂是为不同规模机构提供 SaaS 和 APaaS 方案的在线互动课堂产品，利用腾讯云的技术能力，实现极速开课、多向互动、智能沉淀、一键分发等产品功能，为教育机构提供高稳定高性价比的线上互动课堂服务。
 
 ## 产品功能
 
