--- a/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/对象操作.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/C SDK/对象操作.md
@@ -2191,7 +2191,7 @@ cos_pool_destroy(p);
 
 由于 COS 通过存储桶名称（Bucket）和对象键（ObjectKey）来标识对象。移动对象也就意味着修改这个对象的标识，COS C SDK 目前没有提供修改对象唯一标识名的单独接口，但是可以通过组合**复制对象**加上**删除对象**的基本操作，来达到修改对象标识的目的，从而实现移动对象。
 
-- 复制对象方法详细说明请参见 [设置对象复制](##.E8.AE.BE.E7.BD.AE.E5.AF.B9.E8.B1.A1.E5.A4.8D.E5.88.B6.EF.BC.88.E4.BF.AE.E6.94.B9.E5.B1.9E.E6.80.A7.EF.BC.89)
+- 复制对象方法详细说明请参见 [设置对象复制](#.E8.AE.BE.E7.BD.AE.E5.AF.B9.E8.B1.A1.E5.A4.8D.E5.88.B6.EF.BC.88.E4.BF.AE.E6.94.B9.E5.B1.9E.E6.80.A7.EF.BC.89)
 - 删除对象方法详细说明请参见：[删除对象](#.E5.88.A0.E9.99.A4.E5.8D.95.E4.B8.AA.E5.AF.B9.E8.B1.A1)
 
 #### 示例
