--- a/product/视频服务/播放器/iOS端集成/定制开发/点播播放器.md
+++ b/product/视频服务/播放器/iOS端集成/定制开发/点播播放器.md
@@ -411,7 +411,7 @@ downloader.delegate = self;
 </tr>
 </tbody></table>
 
-由于 downloader 可以同时下载多个任务，所以回调接口里带上了`TXVodDownloadMediaInfo`对象，您可以访问 url 或 dataSource 判断下载源，同时还可以获取到下载进度、文件大小等信息。
+由于 downloader 可以同时下载多个任务，所以回调接口里带上了`TXVodDownloadMediaInfo`对象，您可以访问 URL 或 dataSource 判断下载源，同时还可以获取到下载进度、文件大小等信息。
 
 [](id:offline4)
 ### 步骤4：中断下载
