--- a/product/存储与CDN/对象存储 4.0/SDK文档/Android SDK/快速入门.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/Android SDK/快速入门.md
@@ -248,7 +248,7 @@ val cos = cosService(context = application.applicationContext) {
 
 ### 上传对象
 
-SDK 支持上传本地文件、二进制数据、Uri 以及输入流。下面以上传本地文件为例。
+SDK 支持上传本地文件、二进制数据、Uri 以及输入流。下面以上传本地文件为例：
 
 [//]: # (.cssg-snippet-transfer-upload-file)
 ```java
