--- a/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/配置案例.md
+++ b/product/计算与网络/私有网络2018-09-13/操作指南（新）/安全管理/参数模板/配置案例.md
@@ -17,9 +17,9 @@
 ## 解决方案
 由于用户多个 IP 网段和协议端口有相同的安全组策略，且后续需要更新来源 IP 范围，因此可结合参数模板来实现安全组规则的添加维护。
 
-### 操作步骤
 
-#### 步骤一：新建参数模板
+
+### 步骤一：新建参数模板
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc)。
 2. 选择左侧目录中的**安全** > **参数模板**，进入管理页面。
 3. 在“IP 地址”页签，单击**+新建**，分别新建用于添加入站、出站规则的 IP 地址参数模板。
@@ -33,7 +33,7 @@
 新建成功的协议端口参数模板如下图所示。
 ![](https://main.qcloudimg.com/raw/f2556015fc473208c871764cf7ac6a89.png)
 	
-#### 步骤二：添加安全组规则
+### 步骤二：添加安全组规则
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc)。
 2. 选择左侧目录中的**安全** > **安全组**，进入管理页面。
 3. 在列表中，找到需要引用参数模板的安全组，单击其 ID，进入详情页。
@@ -43,7 +43,7 @@
 ![](https://main.qcloudimg.com/raw/bed9277977fd89c6cc00c7e8c2f70f54.png)
 
 	
-#### 步骤三：更新参数模板
+### 步骤三：更新参数模板
 假设用户需要增加 IP 来源为10.0.1.0/27网段，协议端口为 UDP:58 的入站规则。可以直接更新 IP 地址 ipm-0ge3ob8e 和协议端口 ppm-4ty1ck3i 的参数模板。
 1. 在参数模板的“IP 地址”页签，找到 ipm-0ge3ob8e 参数模板。
 2. 在右侧单击**编辑**。
