--- a/product/教育/云课堂/接入指引.md
+++ b/product/教育/云课堂/接入指引.md
@@ -9,8 +9,7 @@
 
 ### 老师端的使用
 
-- 老师上课端支持：Mac 桌面端、Windows 桌面端、iPad 端、Android pad 端
-下载地址： https://ykt.qq.com
+- 老师上课端支持：Mac 桌面端、Windows 桌面端、iPad 端、Android pad 端。
 - 老师管理端支持：web 管理后台，[管理台登录](https://xkt.campus.qq.com) 地址。
 - 可根据情况下载安装相应的客户端使用。下载安装方法如上。
 
