--- a/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
+++ b/product/安全服务/BGP 高防 IP/高防IP新版/动态与公告/产品动态.md
@@ -31,7 +31,7 @@
 ## 2021-06
 <table>
 <tr><th width=20%>动态名称</th><th width=48%>动态描述</th><th width=15%>发布时间</th><th width=20%>相关文档</th></tr>
-<tr><td>域名接入优化</td><td>支持同时添加同一个域名下的 HTTP 和 HTTPS 协议	</td><td>2021-06-22</td><td><a href="https://cloud.tencent.com/document/product/1014/44106">域名接入</a>
+<tr><td>域名接入优化</td><td>高防 IP 域名转发支持同个域名不通端口转发		</td><td>2021-06-22</td><td><a href="https://cloud.tencent.com/document/product/1014/44106">域名接入</a>
 </table>
 
 ## 2021-01
