--- a/product/域名与网站/SSL 证书/快速入门/新手入门.md
+++ b/product/域名与网站/SSL 证书/快速入门/新手入门.md
@@ -41,7 +41,7 @@
 
 ## 步骤4：安装部署 SSL 证书
 1. 重新登录 [SSL 证书控制台](https://console.cloud.tencent.com/ssl)，进入 “我的证书” 管理页面。
-2. 选择您需要安装的证书，单击操作栏的【下载】。
+2. 选择您需要安装的证书，单击操作栏的**下载**。
 3. 下载证书后，将证书解压后安装至您的云服务资源中。
 <table>
 <tr>
