--- a/product/数据库/分布式云数据库DCDB/2.购买指导/购买续费升级配置.md
+++ b/product/数据库/分布式云数据库DCDB/2.购买指导/购买续费升级配置.md
@@ -5,10 +5,10 @@
 
 ## 实例升级
 实例升级操作指将现有 TDSQL MySQL版 实例的规格升级到更高规格，然而因分布式数据库是由多个分片组成，因此其实例升级有“新增分片，扩容分片”两种方案，升级过程中服务不会终止，但某些分片会发生若干秒的只读现象，建议您在低峰期进行升级。
->?单节点最多可新增至64个分片，超过64个分片需 [提交工单](https://console.cloud.tencent.com/workorder/category) 申请。
->
+>?为保证最佳分布式性能，推荐最多使用8个分片；升级配置时请优先扩容分片，分片规格继续无法扩容时，再考虑增加分片数量。
+
 ### 新增分片
-1. 登录 [TDSQL MySQL版 控制台](https://console.cloud.tencent.com/tdsqld)，在实例列表，单击实例名或“操作”列的【管理】，进入实例管理页面。
+1. 登录 [TDSQL MySQL版 控制台](https://console.cloud.tencent.com/tdsqld)，在实例列表，单击实例 ID 或“操作”列的【管理】，进入实例管理页面。
 2. 在实例管理页面，选择【分片管理】页，在“操作”列单击【新增分片】。
 ![](https://main.qcloudimg.com/raw/a7374f42efa6198b020b8dee64a00eb9.png)
 3. 在弹出的对话框，选择新增分片的规格。
@@ -17,7 +17,7 @@
 扩容分片指不增加分片数量，但将单个分片的规格扩容到更大。
 进入实例管理页面，选择【分片管理】页，在“操作”列单击【调整分片配置】进行调整。
 
-**升级费用=（目标规格单价-原规格单价）x 剩余到期时间**
+**升级费用 = (目标规格单价 - 原规格单价) x 剩余到期时间**
 
 ## 实例续费
 
