--- a/product/存储与CDN/内容分发网络/操作指南/实时日志.md
+++ b/product/存储与CDN/内容分发网络/操作指南/实时日志.md
@@ -37,6 +37,8 @@
 
 ### 新建日志主题
 单击【新建】，创建日志主题。
+>! 一个日志集下至多可创建500个主题。
+>
 ![](https://main.qcloudimg.com/raw/a2d6566eb6d002218a21223cffa5c447.png)
 
 ### 配置日志主题
