--- a/product/域名与网站/域名注册/腾讯云域名特惠包.md
+++ b/product/域名与网站/域名注册/腾讯云域名特惠包.md
@@ -27,7 +27,7 @@
  - 使用域名特惠包，仍须遵从腾讯云域名注册协议相关条款，最终域名能否注册成功请以注册结果为准。
  - 按照购买域名特惠包的实付金额开具等额发票，之后抵扣使用的域名注册订单不再开具发票。
 - **域名特惠包有效期**
- - 域名特惠包有效期为1年，购买后当日起立即生效，到期后失效作废。
+ - 域名特惠包有效期以 [域名特惠包购买页](https://buy.cloud.tencent.com/packs) 显示为准，购买后当日起立即生效，到期后失效作废。
  - 域名特惠包过期后即失效，不可延长有效期，不支持续费，不支持找回。
  - 必须在域名特惠包有效期内使用完域名数量，过期后特惠包内域名数量将作废。
  - 域名特惠包扣除订单对应域名数量后，没有使用完的域名数量将保留在特惠包中，有效期内仍可在下次订单再次使用。
