--- a/product/大数据与AI/腾讯觅影开放实验平台/产品简介/应用场景.md
+++ b/product/大数据与AI/腾讯觅影开放实验平台/产品简介/应用场景.md
@@ -1,4 +1,4 @@
-﻿腾讯觅影开放实验平台主要有以下三种应用场景：
+腾讯觅影开放实验平台主要有以下三种应用场景：
 
 ### 医学影像科研
 基于平台提供的从数据管理、标注，到算法训练、测试、应用的一站式智能服务体系，为临床医生与科研院校、科创企业开展产学研合作搭建桥梁，推进创新协作与成果落地，构建医学影像开放创新生态。
