--- a/product/计算与网络/CKafka/产品动态.md
+++ b/product/计算与网络/CKafka/产品动态.md
@@ -1,3 +1,25 @@
+## 2021年09月
+
+<table><tr>
+<th width="20%">动态名称</th>
+<th width="45%">动态描述</th>
+<th width="15%">发布时间</th>
+<th width="20%">相关文档</th>
+</tr><tr>
+<td>公网流量收费</td>
+<td>CKafka 默认提供3Mbps 免费公网带宽，专业版实例可以额外升配公网带宽，最高可提升至198Mbps。</td>
+<td>2021-09-09</td>
+<td><a href="https://cloud.tencent.com/document/product/597/10066">计费概述</a></td>
+</tr><tr>
+<td>标准版下线高阶规格</td>
+<td>2021年09月xx日起，CKafka 标准版将不再售卖150MB/s以上带宽规格的实例（容量型和高阶型）。在这之前购买的容量型和高阶型实例仍然可以继续使用，也可以在原来的规格体系里面继续升配。</td>
+<td>2021-09-09</td>
+<td><a href="https://cloud.tencent.com/document/product/597/10066">计费概述</a></td>
+</td>
+</tr></table>
+
+
+
 ## 2021年08月
 
 <table><tr>
@@ -22,6 +44,7 @@
 <td><a href="https://cloud.tencent.com/document/product/597/31528">配置 ACL 策略</a></td>
 </td>
 </tr></table>
+
 
 
 
@@ -61,6 +84,7 @@
 
 
 
+
 ## 2021年06月
 
 <table><tr>
@@ -93,6 +117,7 @@
 
 
 
+
 ## 2021年05月
 
 <table><tr>
@@ -106,6 +131,7 @@
 <td>2021-05-28</td>
 <td><a href="https://cloud.tencent.com/document/product/597/11745">计费概述</a></td>
 </tr></table>
+
 
 
 
@@ -147,6 +173,7 @@
 
 
 
+
 ## 2021年03月
 
 <table><tr>
@@ -170,6 +197,7 @@
 <td>2021-03-18</td>
 <td><a href="https://cloud.tencent.com/document/product/597/52524">消费者组管理</a></td>
 </tr></table>
+
 
 
 
@@ -199,6 +227,7 @@
 
 
 
+
 ## 2020年12月
 
 <table><tr>
@@ -212,6 +241,7 @@
 <td>2020-12-10</td>
 <td><a href="https://cloud.tencent.com/document/product/597/36348">添加路由策略</a></td>
 </tr></table>
+
 
 
 
@@ -237,6 +267,7 @@
 
 
 
+
 ## 2020年08月
 
 <table><tr>
@@ -250,6 +281,7 @@
 <td>2020-08-31</td>
 <td><li><a href="https://cloud.tencent.com/document/product/597/42597">产品规格</a></li><li><a href="https://cloud.tencent.com/document/product/597/11745">计费概述</a></li></td>
 </tr></table>
+
 
 
 
@@ -275,6 +307,7 @@
 
 
 
+
 ## 2020年04月
 
 <table><tr>
@@ -294,6 +327,7 @@
 
 
 
+
 ## 2020年03月
 
 <table><tr>
@@ -307,6 +341,7 @@
 <td>2020-03-24</td>
 <td><li><a href="https://cloud.tencent.com/document/product/597/42597">产品规格</a></li><li><a href="https://cloud.tencent.com/document/product/597/11745">计费概述</a></li></td>
 </tr></table>
+
 
 
 
@@ -347,6 +382,7 @@
 
 
 
+
 ## 2019年12月
 
 <table><tr>
@@ -360,6 +396,7 @@
 <td>2019-12-25</td>
 <td>-</td>
 </tr></table>
+
 
 
 
@@ -391,6 +428,7 @@
 
 
 
+
 ## 2019年09月
 
 <table><tr>
@@ -411,6 +449,7 @@
 
 
 
+
 ## 2019年08月
 
 <table><tr>
@@ -424,6 +463,7 @@
 <td>2019-08-08</td>
 <td><a href="https://cloud.tencent.com/document/product/597/36186">CKafka 数据可靠性说明</a></td>
 </tr></table>
+
 
 
 
@@ -455,6 +495,7 @@
 
 
 
+
 ## 2019年05月
 
 <table><tr>
@@ -474,6 +515,7 @@
 
 
 
+
 ## 2019年04月
 
 <table><tr>
@@ -487,6 +529,7 @@
 <td>2019-04-18</td>
 <td>-</td>
 </tr></table>
+
 
 
 
@@ -518,6 +561,7 @@
 
 
 
+
 ## 2018年12月
 
 <table><tr>
@@ -537,6 +581,7 @@
 
 
 
+
 ## 2018年10月
 
 <table><tr>
@@ -550,6 +595,7 @@
 <td>2018-10-28</td>
 <td>-</td>
 </tr></table>
+
 
 
 
