--- a/product/大数据与AI/腾讯觅影开放实验平台/快速入门.md
+++ b/product/大数据与AI/腾讯觅影开放实验平台/快速入门.md
@@ -1,4 +1,4 @@
-﻿### 第1步：登录控制台
+### 第1步：登录控制台
 登录 [腾讯觅影开发平台控制台](https://console.cloud.tencent.com/taop/project-item)。如果没有账号，请先 [注册腾讯云账号](https://cloud.tencent.com/document/product/378/17985)。
 
 ### 第2步：实名认证
