--- a/product/大数据与AI/腾讯觅影开放实验平台/常见问题.md
+++ b/product/大数据与AI/腾讯觅影开放实验平台/常见问题.md
@@ -1,4 +1,4 @@
-﻿### 什么是开放实验平台？
+### 什么是开放实验平台？
 基于腾讯云的安全存储与强大算力的一站式医学人工智能开放创新服务平台。它能满足各类医学影像数据的安全管理和高效标注，内置近百种临床常用算法模型，加速临床影像科研和产品研发，助力医学人工智能产学研创新合作与成果转化。
 
 ### 平台具有哪些应用优势？
