--- a/product/数据库/数据库审计/操作指南/查看审计日志.md
+++ b/product/数据库/数据库审计/操作指南/查看审计日志.md
@@ -1,7 +1,7 @@
 
 ## 查看审计日志
-1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计日志**页。
-2. 在**审计实例**处，选择已经开启审计的数据库实例，即可查看对应的 SQL 审计日志。
+1. 登录 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)、[TDSQL-C 控制台](https://console.cloud.tencent.com/dls/cynosdb/instance) 或  [MongoDB 控制台](https://console.cloud.tencent.com/dls/mongodb)，在左侧导航选择**数据库审计**页，在上方选择地域后，选择**审计日志**页。
+2. 在**审计日志**页的审计实例处，选择已经开启审计的数据库实例，即可查看对应的 SQL 审计日志。或在**审计实例**页，单击已开启审计的实例 ID，跳转至**审计日志**页查看对应日志。
 >?审计日志展示时间扩展到毫秒，便于对 SQL 进行更精确的排序和问题分析。
 
 ### 工具列表
@@ -22,11 +22,10 @@
 - **返回行数**字段代表执行 SQL 返回的具体行数，主要用于对 SELECT 类型 SQL 影响的判断。
  ![](https://main.qcloudimg.com/raw/dae85ee28fa5c0329bf6138a08263ab3.png)
 
-
 ## SQL 审计字段
-### MySQL 审计字段
-TencentDB for MySQL 的审计日志中支持如下字段。用户可以在 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql) 的**审计日志**页面单击如下图标，获取并查看完整的 SQL 审计日志。
-![](https://main.qcloudimg.com/raw/a504bd3353af1c0fce27b223bda0003c.png)
+### 云数据库 MySQL/云原生数据库 TDSQL-C 审计字段
+云数据库 MySQL、云原生数据库 TDSQL-C 的审计日志中支持如下字段。用户可以在 [MySQL 控制台](https://console.cloud.tencent.com/dls/mysql)、[TDSQL-C 控制台](https://console.cloud.tencent.com/dls/cynosdb/instance) 的**审计日志**页面单击如下图标，获取并查看完整的 SQL 审计日志。
+![](https://main.qcloudimg.com/raw/27cee27a3f6ba1dc4a183f61ea1f0a7c.png)
 
 | 序号 | 字段名        | 字段含义                                                     | 备注                                         |
 | ---- | ------------- | ------------------------------------------------------------ | -------------------------------------- |
@@ -50,6 +49,21 @@ TencentDB for MySQL 的审计日志中支持如下字段。用户可以在 [MySQ
 | 18   | lockWaitTime  | 锁等待时间（微秒）                                           |    -                                          |
 | 19   | ioWaitTime    | IO 等待时间（微秒）                                           |     -                                         |
 | 20   | trxLivingTime | 事务执行时间（微秒）                                   |      -                                        |
+
+
+### 云数据库 MongoDB 审计字段
+云数据库 MongoDB 的审计日志中支持如下字段。用户可以在 [MongoDB 控制台](https://console.cloud.tencent.com/dls/mongodb) 的**审计日志**页面单击如下图标，获取并查看完整的 SQL 审计日志。
+![](https://main.qcloudimg.com/raw/86d5ff59721740f2b80a997ae3577f4f.png)
+
+| 序号 | 字段名    | 字段含义   | 备注 |
+| :--- | :-------- | :--------- | :--- |
+| 1    | Timestamp | 时间戳     | -    |
+| 2    | Host      | 客户端 IP  | -    |
+| 3    | User      | 账户名称   | -    |
+| 4    | ExecTime  | 执行时间   | -    |
+| 5    | Param     | 执行语句   | -    |
+| 6    | Result    | 执行状态码 | -    |
+
 
 ## SQL 审计规则
 ### 规则内容
@@ -83,4 +97,5 @@ select *from db1.test,db2.test;
 
 ### 特别说明
 包含、不包含只能写一个值；如果写多个会被当成一个串，造成匹配不对。
+
 
