--- a/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/查看防护概览.md
+++ b/product/安全服务/BGP 高防 IP/DDOS 边缘安全防护/操作指南/查看防护概览.md
@@ -1,4 +1,4 @@
-用户将业务接入 DDoS 边缘防护服务，并且将业务流量切换至 DDoS 边缘防护后，可在控制台查看 DDoS 攻击防护情况、CC 攻击情况、Web 攻击情况和业务流量情况 。支持抓包下载攻击数据，便于用户分析与溯源。
+ 用户将业务接入 DDoS 边缘防护服务，并且将业务流量切换至 DDoS 边缘防护后，可在控制台查看 DDoS 攻击防护情况、CC 攻击情况、Web 攻击情况和业务流量情况 。
 
 ## 查看 DDoS 攻击防护情况
 1. 登录 [DDoS 边缘防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/overview/ddos) ，在左侧导航中，单击【防护概览】，并选择【DDoS 攻击防护】。
@@ -38,12 +38,14 @@
 ![](https://main.qcloudimg.com/raw/098cc9ecd7b7167fab76175e9b691862.png)
  - **攻击流量带宽**
     - 用户可以选择【今天】查看所选择的边缘防护实例的攻击请求数趋势。通过观察总请求值是否远高于正常情况下的业务访问量（QPS），并查看攻击 QPS 是否有数值且数值超大。
-    - 如果存在 CC 攻击，系统会记录下攻击的开始时间、结束时间、被攻击域名、被攻击 url、总请求峰值、攻击请求峰值和攻击源等信息。
 >?
 >- 总请求峰值，统计遭受攻击时，高防 IP 接收到的总请求流量峰值。
 >- 攻击请求峰值，统计遭受攻击时， 由高防系统阻断的请求次数峰值。
 >
 ![](https://main.qcloudimg.com/raw/e8ef0829f2e9f4d981dbb544338d92ec.png)
+   - **CC 攻击记录**
+如果存在 CC 攻击，系统会记录下攻击的开始时间、结束时间、被攻击域名、被攻击 url、总请求峰值、攻击请求峰值和攻击源等信息。
+
 
 ## 查看 Web 攻击防护情况
 1. 登录 [DDoS 边缘防护管理控制台](https://console.cloud.tencent.com/ddos/antiddos-edge/overview/ddos) ，在左侧导航中，单击【防护概览】，并选择【Web 攻击防护】。
