--- a/product/视频服务/实时音视频/高级功能/通话前网络测速.md
+++ b/product/视频服务/实时音视频/高级功能/通话前网络测速.md
@@ -49,7 +49,7 @@
 
 
 <dx-codeblock>
-::: Objective-C Objective-C
+::: Objective-C ObjectiveC
 // 启动网络测速的示例代码, 需要 sdkAppId 和 UserSig，(获取方式参考基本功能)
 // 这里以登录后开始测试为例
 - (void)onLogin:(NSString *)userId userSig:(NSString *)userSid 
