--- a/product/计算与网络/云服务器/云服务器升级换代操作指引.md
+++ b/product/计算与网络/云服务器/云服务器升级换代操作指引.md
@@ -21,9 +21,9 @@
 ### 调整磁盘介质
 本地硬盘转换至云硬盘（系统盘和数据盘都需要调整到高性能云硬盘以上版本）注意事项及相关操作请参见 [调整硬盘介质](https://cloud.tencent.com/document/product/213/31978)。如该过程中遇到问题，请 [联系我们](https://cloud.tencent.com/document/product/213/58600) 进行解决。
 
+
 ### 切换至私有网络
-基础网络切换至私有网络注意事项及相关操作请参见 [切换私有网络服务](https://cloud.tencent.com/document/product/213/20278)。如该过程中遇到问题，请 [联系我们](https://cloud.tencent.com/document/product/213/58600) 进行解决。
-切换至私有网络后，您的云服务器 IP 地址及 DNS 等网络配置信息会更新。
+基础网络切换至私有网络注意事项及相关操作请参见 [切换私有网络服务](https://cloud.tencent.com/document/product/213/20278)。如该过程中遇到问题，请 [联系我们](https://cloud.tencent.com/document/product/213/58600) 进行解决。成功切换至私有网络后，您的云服务器 IP 地址及 DNS 等网络配置信息会更新。
 
 ### 调整普通云硬盘到高性能云硬盘
 调整云硬盘类型注意事项及相关操作请参见[调整云硬盘性能](https://cloud.tencent.com/document/product/362/51897)，如该过程中遇到问题，请 [联系我们](https://cloud.tencent.com/document/product/213/58600) 进行解决。
