--- a/product/计算与网络/云服务器/云服务器升级换代操作指引.md
+++ b/product/计算与网络/云服务器/云服务器升级换代操作指引.md
@@ -3,7 +3,8 @@
 >
 
 ## 步骤1：查看可升级实例
-1. 登录 [云服务器控制台](https://console.cloud.tencent.com/cvm/instance/index?action=&rid=1)，单击页面上方的**免费换代**。如下图所示：
+1. 登录云服务器控制台，选择左侧导航栏中的**[实例](https://console.cloud.tencent.com/cvm/instance/index?action=&rid=1)**。
+2. 单击“实例”页面上方的**免费换代**。如下图所示：
 ![](https://main.qcloudimg.com/raw/76f0881c058307f4a0cfae677ab19124.png)
 2. 在弹出的“机型升级换代”窗口中，仔细查阅活动须知，并单击**下一步**。
 3. 在“确认升级”中，查看可升级换代实例的目标配置及可用区。
@@ -33,7 +34,8 @@
 ![](https://main.qcloudimg.com/raw/b51ca0ea310282fb3a3b9e8602c376d2.png)
 
 ## 步骤4：实例升级换代
-1. 登录 [云服务器控制台](https://console.cloud.tencent.com/cvm/instance/index?action=&rid=1)，单击页面上方的**免费换代**。
+1. 登录云服务器控制台，选择左侧导航栏中的**[实例](https://console.cloud.tencent.com/cvm/instance/index?action=&rid=1)**。
+2. 单击“实例”页面上方的**免费换代**。
 2. 在弹出的“机型升级换代”窗口中，仔细查阅活动须知，并单击**下一步**。
 3. 在“确认升级”中，查看可升级换代实例的目标配置及可用区，勾选需升级的实例。
 4. 单击**开始升级**即可。
