--- a/product/计算与网络/VPN连接/快速入门/建立 VPC 到 IDC 的连接（策略路由）/步骤2：创建对端网关.md
+++ b/product/计算与网络/VPN连接/快速入门/建立 VPC 到 IDC 的连接（策略路由）/步骤2：创建对端网关.md
@@ -1,6 +1,7 @@
-您可以通过如下视频了解对端网关的基本操作。
+本文为您介绍如何创建对端网关，您可以通过如下视频了解对端网关的基本操作。
 <div class="doc-video-mod"><iframe src="https://cloud.tencent.com/edu/learning/quick-play/1786-20143?source=gw.doc.media&withPoster=1&notip=1"></iframe></div>
 
+## 操作步骤
 在 VPN 通道创建前，需要创建对端网关：
 1. 登录 [私有网络控制台](https://console.cloud.tencent.com/vpc/vpc?rid=1)。
 2. 在左侧目录中单击 **VPN 连接** > **对端网关**，进入管理页。
