--- a/product/安全服务/身份安全/多因子验证/常见问题.md
+++ b/product/安全服务/身份安全/多因子验证/常见问题.md
@@ -31,7 +31,7 @@
 - 支持自动派发的方式，即与用户源完成对接后，一旦有新增用户，可以自动派发令牌，不需要用户管理员每次都手动派发。该功能可以根据具体需求开启或者关闭。
 
 ### 是否支持审计？审计日志保留多久？支持哪些审计方式？
-1. 审计日志保留在腾讯云 SaaS 平台上，可以保留180天。
+1. 审计日志保留在多因子身份认证 SaaS 平台上，可以保留180天。
 2. 支持 AD 域审计，只要与 AD 账号源对接，便可基于 AD 域实现账号登录审计功能。
 
 ### 支持的短信通道都有哪些？
@@ -41,7 +41,7 @@
 微信动态令牌仍属于 OTP 令牌，可以参考上文中的 [动态密码认证原理](#Q1)，微信动态令牌与动态密码认证原理相同。
 
 ### 如何激活微信令牌？
-腾讯云将动态令牌与企业微信对接，并显示于工作台，用户只要单击相应按钮即可激活。
+腾讯安全多因子身份认证与微信、企业微信对接，通过腾讯身份验证器微信、企业微信小程序，用户可以完成令牌激活。
 
 ### 用户与令牌是如何绑定的？
 腾讯云多因子认证服务兼容 AD、LDAP、PoP3 等多种账号源。可以通过企业微信账号源进行对接，用户在使用令牌时，向后台反馈企业微信账号、动态密码、令牌序列号及应用场景，并将其与后台认证服务进行校验，进而确认动态密码的正确性。
