--- a/product/物联网/物联网智能视频服务（行业版）/操作指南/存储回放/查看录像.md
+++ b/product/物联网/物联网智能视频服务（行业版）/操作指南/存储回放/查看录像.md
@@ -4,6 +4,10 @@
 
 登录 [物联网智能视频服务（行业版）控制台](https://console.cloud.tencent.com/iot-video-industry)，选择左侧菜单栏**存储回放**进入存储回放页面。
 
+### 云端录像和本地录像切换
+登录腾讯云控制台，选择**存储回放** > **查看录像**，单击**云端录像回放**和**本地录像回放**，可查看设备的云端录像和本地录像。
+
+
 ### 远程回放
 
 #### 选择单视频通道设备进行回放
@@ -39,6 +43,11 @@
 
 登录腾讯云控制台，选择**存储回放**，选择需要回放的视频通道，选择需要回放的日期，单击 <img src ="https://main.qcloudimg.com/raw/d024fe8c4365f82b3b846cbc24d47765.png" style ="margin:0;height:20px"> 图标，在弹框内选择需要下载的时间段(最大仅支持30分钟时长)，单击**下载**。
 ![](https://main.qcloudimg.com/raw/3614c41e4e3831c4b2c8a2e9fd789369.png)
+
+#### 截图
+单击**截图**按钮，可截取当前监控的画面并下载到本地。
+![](https://main.qcloudimg.com/raw/e6b27be397915bcdf0d718a9dd94ce9f.png)
+
 
 #### 倍数播放
 
