--- a/product/企业协同/腾讯会议/操作指南/协作与互动/文档协作/文档创建及导入.md
+++ b/product/企业协同/腾讯会议/操作指南/协作与互动/文档协作/文档创建及导入.md
@@ -30,7 +30,8 @@
 
 
 ### 会中
-Web 端用户会中单击**应用 > 文档**，即可打开文档窗口；客户端用户会中单击**更多 > 文档**，即可打开文档窗口。
+**客户端**
+PC 端用户会中单击**应用 > 文档**，即可打开文档窗口；移动端用户会中单击**更多 > 文档**，即可打开文档窗口。
 - 您可以在该窗口单击**新建表格**和**新建文档**创建文档，并且决定是否邀请会中成员协作。
 - 您也可以在该窗口单击**导入文档**选择从“腾讯文档”导入或导入本地文档，以便在会议中和其他成员共同协作。
 
