--- a/product/计算与网络/对等连接/购买指南/计费概述.md
+++ b/product/计算与网络/对等连接/购买指南/计费概述.md
@@ -11,9 +11,9 @@
 
 ### 日峰值计费
 取当日出入带宽峰值结算。
-- **计算周期**：日结计费，每日产生的费用，会在次日上午的8 - 10点之间进行扣费。
+- **计算周期**：日结计费，每日产生的费用，会在次日上午的8点-10点之间进行扣费。
 - **计算公式**： 每日费用 = 当日带宽峰值 × 带宽所在阶梯的单价。
-   - 当日带宽峰值：每5分钟采集一次，取当日出入带宽的最大值作为每日带宽峰值。
+   - 当日带宽峰值：每5分钟采集一次，取当日出入带宽的最大值作为当日带宽峰值。
    - 阶梯单价：取当日带宽峰值所处阶梯区间为单价。
 - **日峰值计费阶梯价格**
  <table align=“center”>
@@ -51,13 +51,13 @@
 >
 
 - **日峰值计费示例**
-如果对等连接发起方在上海，接受方在广州，当日的出带宽峰值为20Mbps，入带宽峰值为30Mbps，则当日带宽峰值取30Mbps，带宽所在阶梯单价为12元/Mbps/天，则当日费用为：30 × 12 = 360元，于次日上午的8 - 10点之间对发起方进行扣费。
+如果对等连接发起方在上海，接受方在广州，当日的出带宽峰值为20Mbps，入带宽峰值为30Mbps，则当日带宽峰值取30Mbps，带宽所在阶梯单价为12元/Mbps/天，则当日费用为：30 × 12 = 360元，于次日上午的8点-10点之间对发起方进行扣费。
 
  <span id=yjf> </span>
 
 ### 月95计费
 取当月的月95带宽峰值结算（月95计费模式暂不全量开放，如需使用，请 [提交申请](https://cloud.tencent.com/apply/p/clg22aj1t6n) ）。
-- **计算周期**：月结计费，每月产生的费用，会在次月1日上午的8 - 10点之间扣费。
+- **计算周期**：月结计费，每月产生的费用，会在次月1日上午的8点-10点之间扣费。
 - **计算公式**：每月费用 = 地域间互通的月95带宽峰值 × 有效天数占比 × 阶梯单价。
    - 月95带宽峰值：每5分钟采集一次，取5分钟内两地域互通带宽峰值作为一个统计点，当月所有统计点从高到低排序，去掉最高5%的统计点后，取剩下的点中的最大值，记作该月的月95带宽峰值。
 **例如**，对等连接发起方在上海，接受方在广州，6月在上海和广州之间实现跨地域互通的有效天是14天，每5分钟产生一个统计点，每天统计点数为288个（60min × 24 / 5min），则14天内所有统计点数为4032个（14天 × 288个/天 ），4032个统计点的带宽值从高到低排列，去掉最高的5%的点（4032个 × 0.05 = 201.6个），取第202个点的带宽值即为当月的月95带宽峰值。
