--- a/product/数据库/数据库审计/产品动态.md
+++ b/product/数据库/数据库审计/产品动态.md
@@ -15,21 +15,21 @@
 <td>2021-08</td><td><a href="https://cloud.tencent.com/document/product/672/61273" target="_blank">开通云数据库 MongoDB 审计</a></td></tr>
 </tbody></table>
 
-## 2021年0月
+## 2021年05月
 <table>
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <td>支持 TDSQL-C 审计</td>
 <td>腾讯云为云原生数据库 TDSQL-C（兼容 MySQL 版）提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。</td>
-<td>2021-0</td><td><a href="https://cloud.tencent.com/document/product/672/55454" target="_blank">开通云原生数据库 TDSQL-C 审计</a></td></tr>
+<td>2021-05</td><td><a href="https://cloud.tencent.com/document/product/672/55454" target="_blank">开通云原生数据库 TDSQL-C 审计</a></td></tr>
 </tbody></table>
 
-## 20XX年XX月
+## 2020年07月
 <table>
 <tr><th width=20%>动态名称</th><th width=50%>动态描述</th><th width=10%>发布时间</th><th width=20%>相关文档</th></tr>
 <tbody>
 <tr>
-<td>数据库审计正式上线</td>
-<td>数据库审计是腾讯云自主研发的一款专业、高效、全面、实时监控数据库安全的审计产品，数据库审计能够实时记录腾讯云数据库活动，对数据库操作进行细粒度审计的合规性管理，对数据库遭受到的风险行为进行告警，针对数据库 SQL 注入、异常操作等数据库风险行为进行记录，为您的云数据库提供完善的安全诊断和管理功能，提高数据资产安全。</td>
-<td>20XX-XX</td><td><a href="https://cloud.tencent.com/document/product/672/14401" target="_blank">产品概述</a></td></tr>
+<td>支持 MySQL 审计</td>
+<td>腾讯云为云数据库 MySQL 提供数据库审计能力，记录对数据库的访问及 SQL 语句执行情况，帮助企业进行风险控制，提高数据安全等级。</td>
+<td>2020-07</td><td><a href="https://cloud.tencent.com/document/product/672/14403" target="_blank">开通云数据库 MySQL 审计</a></td></tr>
 </tbody></table>
